--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,43 +1,31 @@
 ---
-title: 俄罗斯真的撤军了？美国北约认为恰恰相反
+title: 禁中共高官亲属赴美学习 一周两项制裁中共高官法案
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2018232/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2018273/)
 
-**作者:  **青衣
-![](https://assets.gnews.org/wp-content/uploads/2022/02/3-49.jpg)
-（图片来自网络）
+**作者:  **青衣
+![](https://assets.gnews.org/wp-content/uploads/2022/02/5-28.jpg)
+（美国联邦众议员维姬·哈茨勒  资料图片来自网络）
 
-近日，战争乌云笼罩在俄乌边境。美国和北约均预测俄乌大战一触即发，美国总统拜登甚至还给出了明确时间表：2月16日。然而，截至目前，俄罗斯不仅尚未入侵乌克兰，反而声称已开始从边境撤军。那么，俄罗斯真的撤军了吗？
+美国联邦共和党众议员哈茨勒提出了一项“禁止中共高官及其家属进入美国大学学习”的新法案。该法案锁定对象包括习近平和政治局常委等中共最高层成员及其家属。
 
-据《美国之音》2月17日报道，虽然莫斯科声称正在撤走一些部队，但是美国政府和北约负责人星期三（2月16日）却都表示，俄罗斯实际上正在增兵，并且已基本上包围了乌克兰。
+据《大纪元》2月17日报道，共和党籍美国联邦众议员维姬‧哈茨勒（Vicky Hartzler）办公室周三（2月16日）发布新闻稿称，哈茨勒已提交了《保护高等教育免受中共影响法》（Protecting Higher Education from the Chinese Communist Party Act），该法案将禁止中共官员及其家庭成员获得学生或研究签证。法案锁定所有中国共产党全国代表大会成员及其家属。法案还特别解释家属指的是中共官员的配偶、子女、父母、兄弟姐妹或孙辈。
 
-美国国务卿布林肯在美国广播公司（ABC）《早安美国》（Good Morning America）节目中表示，俄罗斯言行不一。目前不仅并没有看到有意义的撤军，相反，俄军部队继续集结在边界，特别是针对乌克兰发动任何新的侵略所需要的先头部队。
+值得注意的是，法案瞄准的对象包括中共总书记习近平、政治局常委成员、中共中央政治局成员及其家属。
 
-白宫发言人莎琪则对记者表示，相信进攻随时都有可能发生，并且在那之前会有一个编造的借口，俄罗斯方面会以此作为发动入侵的口实。
+该新闻稿称，在2020—2021学年，有超过31.7万名来自中共国的国际学生在美国学习，其中包括中共官员的家庭成员。新闻稿还特别指出，“习近平总书记的女儿习明泽此前于2014年在哈佛大学完成了她的本科学位，并于2019年重新报名参加研究生学习。”
 
-美国国务院发言人普赖斯也指出，目前在乌克兰边界的俄军是更多了而不是更少了。并且更加令人关切的是，俄军正在进入作战位置。普赖斯还表示，美国国务院已就乌克兰事务建立了一个特别工作组，以便在俄罗斯军事威胁乌克兰之际迅速处理事态的发展。
+哈茨勒本人周三在推特上也宣布了这一法案。她表示，当习近平和中国共产党实施种族灭绝时，他的女儿却在哈佛大学接受了世界级的教育。她说：“美国不应该帮助那些积极致力于破坏我们国家的人，新立法将禁止他们进入美国大学。”
 
-位于波兰的通过卫星图像追踪军事动向的独立防务咨询公司“罗尚咨询”（Rochan Consulting）也在一份报告中指出，在莫斯科宣布将一些部队调回原驻地后，却有更多的俄罗斯军用列车抵达了乌克兰附近。没有发现减少兵力的迹象，而事实正好相反。
+哈茨勒此前曾因打击中共政权而受到中共的制裁。她提出了大量对抗中共的立法，包括《保护美国不受间谍影响法》。这项立法将允许美国国务院拒绝向那些已经对美国实施间谍活动或知识产权盗窃的个人发放签证。
 
-爱沙尼亚情报主管马兰甚至称，俄罗斯将对乌克兰发动有限进攻，包括导弹轰炸和占领关键地带。
+哈茨勒周三提交的这项法案是美国国会议员一个多星期内提出的第二项针对中共高官的法案。2月9日，美国众议院多名资深共和党议员提交了《制裁中共暴政压迫人民之官员法》（Sanctioning Tyrannical and Oppressive People within the Chinese Communist Party Act），简称《制裁中共法》（STOP CCP Act）。议员们在声明中表示，“中国共产党必须为其令人发指和令人不安的人权侵犯行为承担责任。”
 
-北约秘书长斯托尔滕贝格在与北约30个成员国的国防部长于布鲁塞尔召开会议时表示，虽然从莫斯科传来有关准备好继续外交努力的信号，但到目前为止，并没有在实地看到有任何减缓，相反俄罗斯似乎在继续增兵。
+《制裁中共法》要求对所有中国共产党全国代表大会成员及其直系亲属进行制裁，制裁对象也同样包括习近平及其家人。该法案将禁止中共的两千多名党员进入美国，并阻止他们的家人入境。这些中共官员及其家人也将被正式禁止涉足美国的金融系统，在美国境内的财产不能进行交易，确保这些党员不能利用其家人绕过制裁。
 
-北约已于星期三下令指挥官草拟在北约联盟东南侧组建新战斗群的计划。斯托尔滕贝格表示，局势已经表明，欧洲正面临一场安全危机，并且将可能成为一种新常态。
-
-美国总统拜登星期二在白宫发表简短讲话时警告称，“入侵的可能性仍然明显”。他还表示，莫斯科如果发动入侵将导致“难以置信的人类痛苦”。
-
-虽然美国和北约等国均认为战争已迫在眉睫，但俄罗斯方面却对此看法不屑一顾。俄罗斯驻欧盟大使奇佐夫在面对德国《世界报》（Welt）提问“俄罗斯是否会在星期三发动进攻时”时调侃称：“欧洲很少在星期三爆发战争。”
-
-克里姆林宫发言人佩斯科夫也对记者表示，俄罗斯总统普京甚至就此开玩笑询问“宣布发动战争的具体时间是什么时候”。佩斯科夫表示，普京愿意谈判，并且认为拜登继续外交对话的意愿是一个积极迹象。
-
-美国近期提出了包括“新的军控措施、新的透明措施、新的战略稳定措施”等多项建议，以解决俄罗斯和北约的安全危机。普京在星期二时表示，他已做好了与美国及其北约盟国就导弹部署和在欧洲军演重新谈判的准备。
-
-[https://www.voachinese.com/a/us-nato-russia-boosting-not-de-escalating-ukraine-military-presence-20220216/6444992.html?utm\_source=twitter&utm\_medium=social&utm\_campaign=dlvr.it](https://www.voachinese.com/a/us-nato-russia-boosting-not-de-escalating-ukraine-military-presence-20220216/6444992.html?utm_source=twitter&amp;utm_medium=social&amp;utm_campaign=dlvr.it)
+新闻链接：[https://www.epochtimes.com/gb/22/2/16/n13582372.htm](https://www.epochtimes.com/gb/22/2/16/n13582372.htm)
 
 * * *
-
-
 
  
 
