--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,36 +1,43 @@
 ---
-title: 2022.2.16大直播后记：中国人有精神上的防火墙
+title: 俄罗斯真的撤军了？美国北约认为恰恰相反
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2018149/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2018232/)
 
-**整理：Anita、Lucy Liu
-编辑：Candy**
+**作者:  **青衣
+![](https://assets.gnews.org/wp-content/uploads/2022/02/3-49.jpg)
+（图片来自网络）
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/直播.png)
+近日，战争乌云笼罩在俄乌边境。美国和北约均预测俄乌大战一触即发，美国总统拜登甚至还给出了明确时间表：2月16日。然而，截至目前，俄罗斯不仅尚未入侵乌克兰，反而声称已开始从边境撤军。那么，俄罗斯真的撤军了吗？
+
+据《美国之音》2月17日报道，虽然莫斯科声称正在撤走一些部队，但是美国政府和北约负责人星期三（2月16日）却都表示，俄罗斯实际上正在增兵，并且已基本上包围了乌克兰。
+
+美国国务卿布林肯在美国广播公司（ABC）《早安美国》（Good Morning America）节目中表示，俄罗斯言行不一。目前不仅并没有看到有意义的撤军，相反，俄军部队继续集结在边界，特别是针对乌克兰发动任何新的侵略所需要的先头部队。
+
+白宫发言人莎琪则对记者表示，相信进攻随时都有可能发生，并且在那之前会有一个编造的借口，俄罗斯方面会以此作为发动入侵的口实。
+
+美国国务院发言人普赖斯也指出，目前在乌克兰边界的俄军是更多了而不是更少了。并且更加令人关切的是，俄军正在进入作战位置。普赖斯还表示，美国国务院已就乌克兰事务建立了一个特别工作组，以便在俄罗斯军事威胁乌克兰之际迅速处理事态的发展。
+
+位于波兰的通过卫星图像追踪军事动向的独立防务咨询公司“罗尚咨询”（Rochan Consulting）也在一份报告中指出，在莫斯科宣布将一些部队调回原驻地后，却有更多的俄罗斯军用列车抵达了乌克兰附近。没有发现减少兵力的迹象，而事实正好相反。
+
+爱沙尼亚情报主管马兰甚至称，俄罗斯将对乌克兰发动有限进攻，包括导弹轰炸和占领关键地带。
+
+北约秘书长斯托尔滕贝格在与北约30个成员国的国防部长于布鲁塞尔召开会议时表示，虽然从莫斯科传来有关准备好继续外交努力的信号，但到目前为止，并没有在实地看到有任何减缓，相反俄罗斯似乎在继续增兵。
+
+北约已于星期三下令指挥官草拟在北约联盟东南侧组建新战斗群的计划。斯托尔滕贝格表示，局势已经表明，欧洲正面临一场安全危机，并且将可能成为一种新常态。
+
+美国总统拜登星期二在白宫发表简短讲话时警告称，“入侵的可能性仍然明显”。他还表示，莫斯科如果发动入侵将导致“难以置信的人类痛苦”。
+
+虽然美国和北约等国均认为战争已迫在眉睫，但俄罗斯方面却对此看法不屑一顾。俄罗斯驻欧盟大使奇佐夫在面对德国《世界报》（Welt）提问“俄罗斯是否会在星期三发动进攻时”时调侃称：“欧洲很少在星期三爆发战争。”
+
+克里姆林宫发言人佩斯科夫也对记者表示，俄罗斯总统普京甚至就此开玩笑询问“宣布发动战争的具体时间是什么时候”。佩斯科夫表示，普京愿意谈判，并且认为拜登继续外交对话的意愿是一个积极迹象。
+
+美国近期提出了包括“新的军控措施、新的透明措施、新的战略稳定措施”等多项建议，以解决俄罗斯和北约的安全危机。普京在星期二时表示，他已做好了与美国及其北约盟国就导弹部署和在欧洲军演重新谈判的准备。
+
+[https://www.voachinese.com/a/us-nato-russia-boosting-not-de-escalating-ukraine-military-presence-20220216/6444992.html?utm\_source=twitter&utm\_medium=social&utm\_campaign=dlvr.it](https://www.voachinese.com/a/us-nato-russia-boosting-not-de-escalating-ukraine-military-presence-20220216/6444992.html?utm_source=twitter&amp;utm_medium=social&amp;utm_campaign=dlvr.it)
+
+* * *
 
 
-共产党确实很邪恶，也确实很“了不起”，能让十几亿人变成这个样子。把十几亿人、哪怕一亿人变成聪明人都很难，但你要把十几亿人变成都听话的人，那比登天都难，共产党真做到了。14亿中国人就能听它胡说八道，这已经不能用任何语言悲剧来形容了。
-
-你看追寻自由（网名）的脸就长开了，看看大陆人的长相，Bunny，脸没长开，没长开是身边的环境让他没长开。中国是一个有精神上的防火墙的，精神上已经被防火墙了！很多人说防火墙真的没有太大的用，它是推动这件事的罪魁祸首，但是没有互联网以前，中国人没有防火墙、没有互联网，中国人就聪明吗？到了海外的中国人，没有防火墙了，你觉得他就开智了吗？
-
-一个国家一个民族任何一个人，最可怕的跟你身边相处的人，一旦这个人没有受过好的教育，他再没有信仰，这人对你来讲几乎是你的炸弹，都是危险。所有的问题就是没有一个好的教育的社会是很可怕的，就像七哥如果没有经历过清风看守所，我可能就是那个买锁链女或者干卖锁链女，什么事我都可能干得出来。不会是养Snow，我会去吃Snow的那种人。因为你没有被教育，你就是最粗鲁的。然后七哥有了信仰。你要说吃狗七哥简直是心都碎了！一看到锁链女心都碎了！为什么？我有信仰！
-
-你去想想，追寻自由刚才的话给旁边人说，所有不信的人，他是被另外一种洗脑教育了，叫科学迷信，叫科学主义。还有对所有的所谓中立媒体的那种被虐待，连加拿大CBS、英国BBC、美国CNN，澳大利亚的Seven电视台，瞪眼撒谎，全世界媒体撒谎。老百姓被所谓的媒体主义、中立媒体主义、未定义的媒体和严肃媒体彻底的洗脑。所以追寻自由，你说他们不听啊，他成了恶魔恶缘。
-
-我们新中国联邦一上来就干得最了不起的事情，就是唯真不破，大家就是做自己（Be yourself）。说实话，你看到任何事情的结果都是不一样的。最重要的事情，我们的直播。
-
-昨天我一个多年的老友给我发信息，我又笑快晕了：“哎呀七哥，你一播就是几个小时，你也不准备准备，不打草稿？”这几年七哥的直播，爆料革命的直播就是唯真不破，不打草稿，没有任何的事情。
-
-所以说兄弟姐妹们，你们听的看的想问的这些东西，最可怕的一个根本原因就是人被洗脑了，没有教育、没有信仰的基础。中国人有多少郭文贵这样有勇气的人？我不是自我感觉好啊，真不多！在你有生之年看到，不会太多。
-
-***发布：Candy***
-
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
