--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,75 +1,39 @@
 ---
-title: 疫苗强制与科学无关，而始终与权力和政治有关
+title: 中共虚张声势的新型“机器人牦牛”将支持地面部队工作
 ---
-`美国政要直译推` [轉載自GNews](https://gnews.org/zh-hans/2018127/)
+`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/2018224/)
 
-众议员安迪·比格斯：
-它（疫苗强制）与科学无关，而始终与权力和政治有关。
+国防和安全问题作家：KYLE MIZOKAMI
+发布日期：2022年02月16日
+新闻来源：https://www.popularmechanics.com/
+翻译：V 在途中
 
-我们必须反对所有用于执行疫苗强制的资金。
-
-【附众议院自由核心小组推文：突发：众议院自由核心小组致函敦促参议院共和党人反对所有用于对美国公民执行疫苗强制的资金】
-
-
-
-> This was never about the science, it was always about power & politics. 
-> 
-> We must oppose ALL funding towards enforcing vaccine mandates. [https://t.co/2uTjp3KxLo](https://t.co/2uTjp3KxLo)
-> — Rep Andy Biggs (@RepAndyBiggsAZ) [February 16, 2022](https://twitter.com/RepAndyBiggsAZ/status/1494012169318547460?ref_src=twsrc%5Etfw)
+- **根据中共国官方新闻机构的报道，中共推出了一种四足机器牦牛，据称它可以承载与两只真正的牦牛一样多的货物。**
+- **仔细查看视频后，看起来机器牛的能力被夸大了。**
+- **中共似乎想用机器人来支持地面部队，而不仅仅是运送补给——该新闻机构似乎隐瞒了其他一些东西。**
 
 
+中国工程师正在开发一种大型的四足机器人“牦牛”，据称它能够拖运与两只真正的牦牛一样多的货物。这个未命名的机器人似乎注定要用于军事用途，类似于位于马萨诸塞州沃尔瑟姆的波士顿动力公司在过去十年中推广的机器狗概念，但仔细看视频，可能只是中共的宣传。
 
-参议员泰得·克鲁兹：
-今天很高兴见到埃内斯·弗里德姆!
-他表现出了巨大的勇气，并为站出来呼吁中国共产党的暴行和种族灭绝付出了个人代价。
-NBA把中共的金钱看得比正义和人权还重，所以没有球队让29岁的他上场。
+该机器人由四个细长的腿和桶形身体支撑，顶部装有一个载货金属架。*中共新闻机构《环球时报》*声称，它最多可以携带 160 公斤（352 磅）的物品，并以每小时 6.21 英里的速度行驶。它援引中共新闻网站*《人民日报*》的话说，该机器人是“世界上最大、最重、最具越野能力的同类机器人”。
 
+*《环球时报》*说，该机器人“对包括台阶、沟渠和悬崖在内的各种地形，更不用说泥泞的道路、草原、沙漠和雪地，表现出非常强的适应能力。” 这表明，该机器牦牛有一个激光雷达传感器，可以感知下落，如沟渠和悬崖。这也就不足为奇的表明：即使是今天的商用机器人，如[Roborock S5](https://go.redirectingat.com/?id=74968X1525083&amp;url=https%3A%2F%2Fus.roborock.com%2Fpages%2Froborock-s5-max&amp;sref=https%3A%2F%2Fwww.popularmechanics.com%2Fmilitary%2Fweapons%2Fa39026037%2Fchinas-new-robotic-yak%2F&amp;xs=1&amp;xcust=%5Butm_source%7C%5Butm_campaign%7C%5Butm_medium%7C%5Bgclid%7C%5Bmsclkid%7C%5Bfbclid%7C%5Brefdomain%7C%5Bcontent_id%7C3ee58db0-b31d-4daf-9ef3-5ba128e88621%5Bcontent_product_id%7Cf672096c-09a3-4c9a-803a-63507d85fc6e%5Bproduct_retailer_id%7C)，也具有此功能。泥泞的道路、草原、沙漠和雪原都是天生的平坦地形，因为障碍物很少。
 
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2165.png)视频显示，这只机器牛似乎正朝着一条布满岩石的小路前进，但随后又切入了一个新的场景。但这没关系，因为无论如何它显然只是在一条土路上，相机角度使它看起来像是朝着岩石前进。
 
-> Great to meet [@EnesFreedom](https://twitter.com/EnesFreedom?ref_src=twsrc%5Etfw) today!
-> 
-> He’s shown enormous courage—and has paid a personal price for—standing up & calling out the atrocities & genocide of the Chinese Communist Party.
-> 
-> The [@nba](https://twitter.com/NBA?ref_src=twsrc%5Etfw) values CCP $$ more than Justice or human rights & so at age 29 no team will let him play. [pic.twitter.com/6UlcYf9EOg](https://t.co/6UlcYf9EOg)
-> — Ted Cruz (@tedcruz) [February 16, 2022](https://twitter.com/tedcruz/status/1494032026420273162?ref_src=twsrc%5Etfw)
+精心剪辑的视频表明机器牦牛在障碍物方面存在严重问题，例如岩石和丘陵地形。视频显示，机器牦牛正在穿越沙漠，有人通过遥控器控制它。这一切似乎都令人印象深刻，直到您意识到大部分实际镜头都是机器牦牛在笔直平坦的地形或铺砌的斜坡上行走。
+每次牦牛前往未铺砌的地形，尤其是散布着岩石或未铺砌的斜坡的地形时，视频都会切换到一个新场景。在一个场景中，机器牛似乎正在崎岖的地形上行走，但仔细观察后，我们实际上无法看到机器牛正在行走的地方。
+该视频还试图掩盖机器牦牛的军事背景。视频中散布在机器人前面的横幅模糊不清，这是一件奇怪的事情。然而，在视频的另一点可以看到其中的一部分，并显示了一辆带有坦克状炮塔的轮式车辆。这表明中国军方可能对这种机器耗牛有更多的想法，而不仅仅是运送物资。
 
+无论这只机器牦牛的命运如何，它至少比五角大楼的机器宠物项目落后十年。 2012 年，海军陆战队和国防高级研究计划局 (DARPA)测试了Four-Legged Robot
+小队支援系统 (LS3)。 LS3 由波士顿动力公司开发，重 800 磅，可运载 400 磅货物，航程 20 英里。 LS3 甚至可以通过语音命令进行控制。
+更好的是，LS3 在应对崎岖地形方面要好得多。在上面的视频中，LS3 可以轻松穿越岩石地形、攀登岩石山丘并直接穿过灌木丛。
+Robo-yak 不会很快布置到任何地方，原因与海军陆战队从未追求 LS3 的原因相同：机器人依靠电池运行，一旦电池耗尽，它需要在一个有充足电力的地方充电几个小时。如果电池技术可以使腿式机器人的运行距离增加三倍，那么不久之后我们就可以在战场上看到它们。与此同时，机器牦牛的工程师们也有足够的时间来解决中共《人民日报》努力掩盖的缺陷。
 
+新闻来源：[China’s New ‘Robotic Yak’ Will Support Ground Troops, But It’s Not as Capable as It Seems](https://www.popularmechanics.com/military/weapons/a39026037/chinas-new-robotic-yak/)
 
-参议员玛莎.布莱克本：
-当我为埃内斯勇敢地与共产主义中国抗争鼓掌时，我没想到他会站得这么高！
-
-感谢您大声疾呼并追究中共的责任，感谢您今天与我们共进午餐，埃内斯 @EnesFreedom。
-
-
-
-> When I applauded Enes for his courage to stand up to Communist China, I didn’t think he’d be standing this tall!
-> 
-> Thank you for speaking up and holding the CCP accountable, and thank you for joining us at lunch today, [@EnesFreedom](https://twitter.com/EnesFreedom?ref_src=twsrc%5Etfw). [pic.twitter.com/OlqowUtc9B](https://t.co/OlqowUtc9B)
-> — Sen. Marsha Blackburn (@MarshaBlackburn) [February 16, 2022](https://twitter.com/MarshaBlackburn/status/1494077108833996810?ref_src=twsrc%5Etfw)
-
-
-
-众议院迈克·麦考尔：
-
-历史将把 2022北京作为耻辱铭记。虽然 #中共 迫切希望人们在奥运期间以积极的眼光看待其政权，但美国人应该将目光转向中共长期践踏人权的历史。这就是北京2022的真实故事。
-【转休斯顿纪事推文：尼基·海利，迈克·麦考尔：当你观看北京奥运时你不会看到的是什么】
-
-
-
-> History will remember [#Beijing2022](https://twitter.com/hashtag/Beijing2022?src=hash&amp;ref_src=twsrc%5Etfw) as a disgrace. While the CCP desperately wants people to see its regime in a positive light during the games, Americans should turn its gaze instead to the CCP’s long history of human rights abuses. That’s the true story of [#Beijing2022](https://twitter.com/hashtag/Beijing2022?src=hash&amp;ref_src=twsrc%5Etfw). [https://t.co/cWm5lw4mfR](https://t.co/cWm5lw4mfR)
-> — Michael McCaul (@RepMcCaul) [February 16, 2022](https://twitter.com/RepMcCaul/status/1494066290834747396?ref_src=twsrc%5Etfw)
-
-
-
-美前国务卿迈克·蓬佩奥：
-我希望你们和我一起祈祷，在东欧和平面临挑战之际，祈祷我们的世界领导人拥有智慧、耐心和力量。
-
-
-
-> I hope you will join me in praying for our world leaders to have wisdom, patience and strength, as this challenge to peace in Eastern Europe unfolds. [https://t.co/QYne2i1Z4b](https://t.co/QYne2i1Z4b)
-> — Mike Pompeo (@mikepompeo) [February 16, 2022](https://twitter.com/mikepompeo/status/1494081371635167240?ref_src=twsrc%5Etfw)
-
-
+审核校对：Barry Jack
+上传排版：V在途中
 
  
 
