--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,25 +1,226 @@
 ---
-title: 樱花FM┃澳大利亚在经过近两年的边境关闭后 终于将对国际游客开放
+title: 每日快报：中国商人郭文贵向美国法院申请破产
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2018351/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2018361/)
 
-音频：东京樱花团/战友520
-![](https://lh5.googleusercontent.com/iDRfKrcK_MoadkiYy9XWLDlkw7I2a3lJlr_q9hm1j1CFlj0__T0rVrmu7uwhD417PKNZ_d7NUsK0yz4dcQRp03_Ofkyy8GH3NUY7_yZKx_ef9gaTIKlzuVje1mnFtCzvhJge980-)
-澳大利亚的边境在经过近两年的关闭以阻止中共病毒（新冠病毒Covid-19）的传播后，终于将于2月21日对国际游客开放。但是，游客必须接受双重疫苗接种，否则就有可能像怀疑疫苗接种的网球明星诺瓦克·德约科维奇那样被拒之门外。他在上个月的澳大利亚网球公开赛之前被送回了家。
+*作者：*文零
 
-“条件是你必须接种两次疫苗才能来澳大利亚。这就是规则，每个人都应该遵守。”总理斯科特-莫里森说，“但如果你接种了双重疫苗，我们期待着欢迎你回到澳大利亚，我知道旅游业将期待着这一点。”
+![](http://himalayawashingtondc.org/wp-content/uploads/2021/08/每日快报.png)
 
-莫里森先生说，做出这个决定是因为澳大利亚现在已经被中共病毒的Omicron变体所蹂躏，这意味着国际旅行者不会构成额外的风险。
+# ***今日摘要***
 
-“该变种已经在澳大利亚境内。对于那些即将到来的双重疫苗接种者，他们不会比那些已经在澳大利亚的人带来更大的风险。”
+1. [中国商人郭文贵向美国法院申请破产](https://www.reuters.com/markets/us/chinese-businessman-guo-wengui-files-bankruptcy-us-court-2022-02-16/)
+2. [美国官员：俄罗斯在乌克兰边境附近增兵7K](https://apnews.com/article/russia-ukraine-europe-russia-united-states-vladimir-putin-534fb1c355ff5f135ba0261cb1448c3c)
+3. [美国称俄罗斯从乌克兰边境撤军的说法是错误的](https://www.reuters.com/world/europe/us-says-russias-claim-withdrawing-troops-border-with-ukraine-is-false-2022-02-17/)
+4. [乌克兰情报显示没有俄罗斯撤军的证据](https://www.reuters.com/world/europe/ukraine-intelligence-shows-no-proof-russian-troop-withdrawal-minister-2022-02-16/)
+5. [渥太华紧张局势加剧，警方警告卡车司机离开](https://apnews.com/article/coronavirus-pandemic-health-canada-ontario-ottawa-e453c810201789b127654ab7aeec021d)
 
-而对未接种疫苗的签证持有者需要获得旅行豁免才能入境，并在抵达后接受各州和地区的检疫要求。
 
-文字版原文：[澳大利亚在经过近两年的边境关闭后 终于将对国际游客开放](https://gnews.org/zh-hans/1968521/)
+# 重要事件
 
-*编辑：东京樱花团/asket
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+- [**02.16.REUTERS：中国商人郭文贵向美国法院申请破产；Chinese businessman Guo Wengui files for bankruptcy in U.S. court**](https://www.reuters.com/markets/us/chinese-businessman-guo-wengui-files-bankruptcy-us-court-2022-02-16/)
+
+
+2月 16 日（路透社）——一份法庭文件显示，中国商人郭文贵（又名郭浩云）向位于布里奇波特的美国破产法庭申请个人破产保护。
+
+郭在破产申请中列出的资产在50,001美元至100,000美元之间，负债在1亿美元至5亿美元之间。在对郭有债权的债权人名单中，他将太平洋联盟亚洲机会基金列为债权最大的债权人，约2.54亿美元。该基金因涉嫌在2008年至2011年期间价值8800万美元的未偿贷款而起诉郭，该基金已在纽约州法院就该问题与他进行了四年的法律战。
+
+- [**02.16. APNEWS：美国官员：俄罗斯在乌克兰边境附近增兵7K；US official: Russia adds 7K more troops near Ukraine border**](https://apnews.com/article/russia-ukraine-europe-russia-united-states-vladimir-putin-534fb1c355ff5f135ba0261cb1448c3c)
+
+
+乌克兰基辅（美联社）——周三，乌克兰人无视来自莫斯科的压力，举行了举旗团结的全国表演，而美国警告称，尽管克里姆林宫宣布部队正在撤出乌克兰边境，但俄罗斯已在乌克兰边境附近增派多达7,000名士兵。
+
+虽然俄罗斯入侵乌克兰并没有像人们担心的那样成为现实，但美国及其盟国坚持认为威胁仍然很大，欧洲的安全和经济稳定处于平衡之中。据西方估计，俄罗斯已在乌克兰东部、北部和南部集结了超过150,000名士兵。俄罗斯总统弗拉基米尔·普京表示，他希望通过和平途径摆脱危机，美国总统乔·拜登承诺美国将继续给予外交“一切机会”，但他对莫斯科的意图持怀疑态度。拜登还坚称，华盛顿及其盟友不会“牺牲”尊重乌克兰主权的基本原则。俄罗斯国防部的视频显示，一列装甲车从克里米亚的一座桥上驶过，克里米亚是俄罗斯于2014年从乌克兰吞并的黑海半岛。它还宣布，更多的坦克部队正在被装载到火车上，以便在之后返回其永久基地。但与此同时，俄罗斯继续在乌克兰边境附近和其广阔领土上进行军事演习。
+
+一位美国政府高级官员说，西方发现俄罗斯在乌克兰附近增派了7,000名士兵，其中一些部队最近才抵达，而且俄罗斯人声称克里姆林宫可能会以此为借口的虚假声明明显增加。这位官员说，这些说法包括关于据称被乌克兰军队杀害的平民墓地的报道、美国和乌克兰正在开发生物或化学武器的声明，以及西方正在集结游击队杀害乌克兰人的说法。该官员无权公开谈论敏感行动，并在不愿透露姓名的情况下与美联社交谈。该官员没有为这些说法提供基本证据。美国和欧洲继续威胁要严厉制裁，东西方之间的信任仍然难以捉摸。“我们还没有看到回调，”美国国务卿安东尼·布林肯告诉ABC新闻：“他（普京）可以扣动扳机，他今天可以拉，他明天可以拉，他下周就可以拉了。如果他想重新对乌克兰发动侵略，那么军队就在那里。”
+
+- [**02.16. REUTERS：美国称俄罗斯从乌克兰边境撤军的说法是错误的；U.S. says Russia’s claim of withdrawing troops from border with Ukraine is false**](https://www.reuters.com/world/europe/us-says-russias-claim-withdrawing-troops-border-with-ukraine-is-false-2022-02-17/)
+
+
+华盛顿，2月16日（路透社）——拜登政府的一名高级官员周三表示，美国不相信俄罗斯声称从乌克兰边境撤军的说法，并怀疑莫斯科增加了多达7,000名士兵。
+
+“所以昨天，俄罗斯政府说它正在从乌克兰边境撤军……但我们现在知道这是假的，”这位官员在没有提供细节或提供证据的情况下告诉记者。这位不愿透露姓名的官员说，拜登政府证实，“俄罗斯已在乌克兰边境增加了多达7,000名士兵”，其中许多人最近才在周三抵达。这位高级政府官员还表示，俄罗斯公开声称从事外交活动，并声称在“私下动员战争”的同时“降级”。俄罗斯国防部周三表示，在乌克兰附近的演习后，其部队正在撤退，并发布了视频，称该视频显示部队正在离开克里米亚半岛。
+
+但美国国务卿安东尼·布林肯周三在接受MSNBC采访时表示，“关键部队”正在向边境移动。周二，美国总统乔·拜登表示，美国估计有15万俄罗斯军队包围了乌克兰，高于此前估计的约10万。这位高级政府官员表示，美国继续收到表明俄罗斯可以“随时发起虚假借口”为入侵乌克兰辩护的信息。这位官员指出，俄罗斯最近几天在网上的虚假声明和虚假信息有所增加。
+
+- [**02.16. REUTERS：乌克兰情报显示没有俄罗斯撤军的证据；Ukraine intelligence shows no proof of Russian troop withdrawal -minister**](https://www.reuters.com/world/europe/ukraine-intelligence-shows-no-proof-russian-troop-withdrawal-minister-2022-02-16/)
+
+
+基辅，2月16日（路透社）——国防部长奥列克西·雷兹尼科夫（Oleksii Reznikov）在接受路透社采访时告诉路透社，周三汇编的最新乌克兰情报报告显示，没有证据表明俄罗斯从乌克兰边境附近撤军。他说，只有在俄罗斯撤出军队、军事硬件和武器，包括部署在白俄罗斯参加将于2月20日结束的演习的部队时，乌克兰才会相信俄罗斯是认真地化解当前危机的。据乌克兰军方称，目前约有14万俄军和亲俄分裂势力联合集结在乌克兰附近，其中包括12.5万地面部队。他说，仅白俄罗斯就有9000名俄罗斯军队。相比之下，雷兹尼科夫表示，乌克兰在其东部顿巴斯地区约有35,000名士兵，基辅自2014年以来一直在与俄罗斯支持的分离主义叛乱分子作战。
+
+他的评论突显了乌克兰及其西方支持者对俄罗斯声称在乌克兰附近演习后撤军的怀疑态度。西方担心它们可能被用来对乌克兰发动军事攻击，而莫斯科一再否认这一点。周三晚些时候，乌克兰总统泽连斯基在亚速海港口马里乌波尔的电视简报会上发表讲话，也对俄罗斯的声明表示怀疑。“我们已经看到（俄罗斯）军队大量集结。这在最近几周没有改变，我们看到了小幅轮换。我不会称这些轮换是俄罗斯联邦军队的撤军，”他说。
+
+俄罗斯国防部发布了一段视频，称其显示坦克、步兵战车和自行火炮部队离开克里米亚半岛，莫斯科于2014年从乌克兰手中夺取了克里米亚半岛。“不幸的是，我们无法通过客观指标证实这一信息。乌克兰情报数据或我们战略合作伙伴的情报界数据都没有证实这一点，”雷兹尼科夫说。即使俄罗斯军队从一个地方撤离，雷兹尼科夫表示，这可能只是“迁移”到乌克兰附近的另一个地区，而不是真正的撤退。“他们调来的所有部队……必须返回他们的永久部署点。那么很明显，他们已经取消了他们的激进计划，”他说。“撤离人员是不够的——武器和装备也必须离开，”雷兹尼科夫补充说。
+
+乌克兰国防部本周遭受了政府所说的该国历史上最大的拒绝服务攻击。政府怀疑俄罗斯可能是这次袭击的幕后黑手。莫斯科否认有任何参与。雷兹尼科夫说，这次黑客攻击没有破坏国防部的门户网站，也没有影响乌克兰封闭的指挥和控制系统。他说，该部希望建立专门的网络部门来应对未来的此类攻击。
+
+- [**02.16. APNEWS：渥太华紧张局势加剧，警方警告卡车司机离开；Tensions mount in Ottawa as police warn truckers to leave**](https://apnews.com/article/coronavirus-pandemic-health-canada-ontario-ottawa-e453c810201789b127654ab7aeec021d)
+
+
+安大略省渥太华（美联社）-渥太华近三周的卡车司机围攻抗议该国的COVID-19限制措施似乎正在形成摊牌，因为首都警方周三警告司机立即离开，否则有被捕的风险。停在议会外的大型钻井平台代表了该运动的最后一个据点，此前示威者放弃了他们在美国边境唯一剩下的卡车封锁。就这样，所有过境点在两周多的骚乱中首次开放，人们将注意力集中在首都，那里的司机挑衅地撕毁警告，告诉他们回家。身穿黄色“警察联络”背心的当局从一个钻机到另一个钻机，敲门并向卡车司机分发传单，告知他们可能会被起诉、吊销执照并看到他们的车辆根据加拿大紧急情况法被没收。警方也开始对车辆进行售票。一名抗议者大喊：“我永远不会回家！”一些人将警告扔进了街上的厕所。抗议者坐在他们的卡车上，按喇叭，合唱声响彻市中心。
+
+警方在周三晚上之前发出了第二轮更明确的警告，详细说明了留下来的人可能面临的指控和处罚。该市临时警察局长表示，官员们可能很快就会搬进来清理数百辆卡车。“我们将收回整个市中心和每个占用的空间。我们将删除这种非法抗议。我们将使我们的城市恢复正常状态，”临时局长史蒂夫贝尔在一份声明中告诉城市领导人。“你将在未来几天听到和看到这些行动。”
+
+抗议领袖准备在周三采取行动。“如果这意味着我需要入狱，如果我需要被罚款才能让这个国家恢复自由——数百万人为他们的自由付出了更多，”前往渥太华的大卫佩斯利说和一个卡车司机的朋友。两天前，总理贾斯汀·特鲁多（Justin Trudeau）援引紧急状态法试图阻止抗议活动。“政客不应该告诉警察何时以及如何做事。我们对紧急行动所做的就是确保警方拥有必要的工具，”特鲁多周三表示。“我和渥太华的所有居民一样，希望这能很快发生。” 这场危机已成为特鲁多迄今为止最严峻的考验之一，这位看起来很孩子气的50岁老人长期以来一直为他的父亲皮埃尔·特鲁多（Pierre Trudeau）提供明星力量——如果不是政治影响力的话。一些立法者指责年轻的特鲁多没有更果断地反对抗议活动，而其他人则指责他在承担紧急权力方面走得太远。
+
+# 更多要闻链接
+
+1. [加拿大警方威胁逮捕抗议者；政府将封锁与极端分子联系起来](https://www.reuters.com/world/americas/canadian-government-wants-quickly-clear-covid-protest-blockades-ottawa-2022-02-16/)
+2. [加拿大卡车司机对特鲁多援引紧急情况法案的反应：“他刚刚获得了更多的自由战士”](https://www.foxnews.com/world/he-just-gained-more-freedom-fighters-truckers-react-to-trudeau-invoking-emergencies-act)
+3. [美国政府顾问SHRED文件详细介绍了福奇机构在奥巴马时代与武汉实验室的合作](https://thenationalpulse.com/2022/02/16/nih-refuses-to-comply-with-congressional-doc-request/)
+4. [CDC考虑在未来几周内更改口罩指南](https://www.theguardian.com/world/2022/feb/16/cdc-change-update-covid-mask-guidance)
+5. [CDC估计超过100万例与COVID-19相关的超额死亡](https://www.washingtonexaminer.com/policy/cdc-estimates-over-1-million-excess-deaths-linked-to-covid-19)
+
+
+# 每日推特文摘
+
+
+
+2月15号：七哥从这一刻起个人正式破产了……案件号码：Case No. 22-50073.
+
+
+
+
+
+> 2月15号：七哥从这一刻起个人正式破产了……案件号码：Case No. 22-50073. [pic.twitter.com/fWrYbO0k3O](https://t.co/fWrYbO0k3O)
+> — yanhuali(澳喜特战旅) (@yanhuali2) [February 16, 2022](https://twitter.com/yanhuali2/status/1493832946981412868?ref_src=twsrc%5Etfw)
+
+
+
+
+
+
+
+千亿资产被夺，不曾动摇他的意志
+
+家人员工被捕，不能阻碍他的行动
+
+莫须有的缠诉，不会改变他的目标
+
+破产？只能迎来爆料革命更彻底的胜利 破产？只会赢得全世界对新中国联邦人的尊重
+
+
+
+
+
+> 千亿资产被夺，不曾动摇他的意志
+> 家人员工被捕，不能阻碍他的行动
+> 莫须有的缠诉，不会改变他的目标
+> 
+> 破产？只能迎来爆料革命更彻底的胜利
+> 破产？只会赢得全世界对新中国联邦人的尊重 [pic.twitter.com/BJTYKKHAvl](https://t.co/BJTYKKHAvl)
+> — 西班牙巴塞罗那喜悦农场 (@HimalayaBCN\_ES) [February 16, 2022](https://twitter.com/HimalayaBCN_ES/status/1494042749389131782?ref_src=twsrc%5Etfw)
+
+
+
+
+
+
+
+郭先生直播中曾说：
+
+“我是冒着全家一千多亿资产（被查封）、全家人被抓、员工被抓&被杀（的风险出来爆料）！我时刻面临着生命危险，我就是为了维权吗？”
+
+“不灭共，我们都会变成杨改兰！”
+
+不灭共，我们的后代也都会变成“锁链女”！
+
+#TakeDownTheCCP
+
+
+
+
+
+> 郭先生直播中曾説：
+> 
+> “我是冒著全家一千多億資產（被查封）、全家人被抓、員工被抓&被殺（的風險出來爆料）！我時刻面臨著生命危險，我就是爲了維權嗎？”
+> 
+> “不滅共，我們都會變成楊改蘭！”
+> 
+> 不滅共，我們的後代也都會變成“鎖鏈女”！[#TakeDownTheCCP](https://twitter.com/hashtag/TakeDownTheCCP?src=hash&amp;ref_src=twsrc%5Etfw) [pic.twitter.com/7DkTr3DmZ9](https://t.co/7DkTr3DmZ9)
+> — 500 𝕸𝖎𝖑𝖊𝖘 (@SafeGuard009) [February 16, 2022](https://twitter.com/SafeGuard009/status/1493817487385051138?ref_src=twsrc%5Etfw)
+
+
+
+
+
+
+
+大事，马上，马上，喜币喜联储将推出新的HPAY政策，马上推出H贷款和H抵押，然后喜联储可能会有重大利好投资的完全震惊你的新公告。七哥个人破产，但是你们越来越有钱，巨大的，很快的时间，不会超过一个月。（转自小飞象）
+
+
+
+
+
+> 🔥🔥大事，馬上，馬上，喜幣喜聯儲將推出新的HPAY政策，馬上推出H貸款和H抵押，然後喜聯儲可能會有重大利好投資的完全震驚你的新公告。七哥個人破產，但是你們越來越有錢，巨大的，很快的時間，不會超過一個月。（轉自小飛象） [pic.twitter.com/cEGd4UzPKG](https://t.co/cEGd4UzPKG)
+> — 台灣大牛(台灣寶島農場) (@jackson66368924) [February 16, 2022](https://twitter.com/jackson66368924/status/1493966315736137731?ref_src=twsrc%5Etfw)
+
+
+
+
+
+
+
+拜登最厉害的地方，就在于会把政治斗争中全部可能射向自己的子弹转嫁给中共。
+
+阿富汗撤军中丢的分，必须要全在台湾和乌克兰上找回来。病毒溯源的事情，共和党已经摆明了要干，拜登不会拱手把这个政治资本送给共和党来威胁自己
+
+乾坤大挪移，加上斗而不破，这两招让拜登稳坐白宫，也注定了中共的命运。
+
+
+
+
+
+> 拜登最厉害的地方，就在于会把政治斗争中全部可能射向自己的子弹转嫁给中共。
+> 阿富汗撤军中丢的分，必须要全在台湾和乌克兰上找回来。病毒溯源的事情，共和党已经摆明了要干，拜登不会拱手把这个政治资本送给共和党来威胁自己
+> 乾坤大挪移，加上斗而不破，这两招让拜登稳坐白宫，也注定了中共的命运。
+> — 冠军的亲爹（冠博士） (@Guan\_PhD) [February 17, 2022](https://twitter.com/Guan_PhD/status/1494128797335146499?ref_src=twsrc%5Etfw)
+
+
+
+
+
+
+
+谁是中共在美国的高级间谍
+
+单卫健
+
+
+
+
+
+> Who is the high-rank Spy of CCP in the US👇👇👇
+> Shan Weijian [pic.twitter.com/oLvBCJ6mj0](https://t.co/oLvBCJ6mj0)
+> — 安平 Emma(新生号） (@PingRyan2016) [February 17, 2022](https://twitter.com/PingRyan2016/status/1494117279675658245?ref_src=twsrc%5Etfw)
+
+
+
+
+
+
+
+普京为什么突然宣布撤兵？美国，欧洲和日本，再加巴西，德国，法国和英国的强硬态度让普京软了，不过，也可能是战术撤军杀个回马枪。
+
+普京打乌克兰，又突然撤军，玩的是经济战争，对台湾是好事，如果打乌克兰，习一定打台湾。
+
+
+
+
+
+> [#2022年2月16日文贵先生直播摘要](https://twitter.com/hashtag/2022%E5%B9%B42%E6%9C%8816%E6%97%A5%E6%96%87%E8%B4%B5%E5%85%88%E7%94%9F%E7%9B%B4%E6%92%AD%E6%91%98%E8%A6%81?src=hash&amp;ref_src=twsrc%5Etfw)
+> 
+> 🖖、普京为什么突然宣布撤兵？美国，欧洲和日本，再加巴西，德国，法国和英国的强硬态度让普京软了，不过，也可能是战术撤军杀个回马枪
+> 🖖、普京打乌克兰，又突然撤军，玩的是经济战争，对台湾是好事，如果打乌克兰，习一定打台湾 [pic.twitter.com/SKelvt9ZGl](https://t.co/SKelvt9ZGl)
+> — 文俊（日本银河系） (@wenjun7011) [February 16, 2022](https://twitter.com/wenjun7011/status/1493986354002554881?ref_src=twsrc%5Etfw)
+
+
+
+
+
+*编辑：文零
+审核发布：文顾*
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
