--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,35 +1,21 @@
 ---
-title: 2月16日大直播后记：2025一定灭共
+title: 樱花FM┃篮球明星坎特再开炮 北京冬奥网络收视少上届43％
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2018292/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2018310/)
 
-整理：清水冷香、Lucy Liu
-编辑：小红帽
+音频：东京樱花团/战友520
+![](https://lh4.googleusercontent.com/i6xFLsaj8cGP1ZhiEYFEROkWfS5jxlWAurHyN4zW8bSmRFPYkig8Q_r9psnmxP8Uqc8pJqPc9fzGdq9plvcZLUriVftK9-KyFRjmCJo3DqSC4V9XywgMhu9oTSovEf68gsHQjPb8)
+2月7日，篮球明星坎特再度于脸书开炮，指称2022北京冬奥的开幕式仅有16Ｍ（1,600万）人观看，并且全时段直播的观众人数都很少。相较于上一次2018年2月的平昌冬奥有28.3M（2,830万）的观看人数，北京冬奥低了43％。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-7.png)图片来源：雅典娜农场设计组（614）
+坎特也直接怒呛北京称，“这就是你们把田径比赛变成替邪恶帝国作政治宣传的结果”（This is what you get for turning athletics into propaganda for an EVIL EMPIRE）。
 
+事实上，坎特这几日都未曾停止在脸书挞伐中共，他持续在贴文中表示“人们要我专注在篮球上，不要搞政治，但我从未搞政治，政治和人权存在著差别”。“我们不能在面对不正义时保持沉默，世界需要清醒起来，认知到中国共产党并不是我们的朋友”。坎特过去曾多次就新疆、彭帅等问题批评中共，日前更杠上中共篮球协会主席的姚明，不仅指姚明封锁自己IG的行为很像小孩，还酸其“身高高心眼小”，喊话姚明“停止当中共的傀儡”。
 
-川普是直接斗啊，叽叽喳喳地就来了，给你斗，明斗。拜登是在背后控制那个人啊，悄无声息地就过去了，这绝对是政治高手。这回习太阳（习近平）遇到了我认为国际政治上最厉害的普京（他的“Partner”）。这就吓人了，习太阳无法想象，接下来他将面对的对手。
+文字版原文：[篮球明星坎特再开炮 北京冬奥网络收视少上届43％](https://gnews.org/zh-hans/1968547/)
 
-就是在今年年底，欧洲的大选，法国的大选，英国上院下院，整个巴西，特别是美国的中期选举，共和党全部拿出来以后。共和党这几个新人了不得呀。兄弟姐妹们，这都是能人呐，都是天才呀。还有这个混不吝的班农，将成为主角中的主角。你想一想他们（共产党）怎么对付？
-
-现在告诉大家排华事件，排亚裔事件，会越来越严重，非常之可怕。大家一定要小心，个人破产是小事儿，你没命了，你有再多钱，那才是悲剧。人去天堂了，钱还在银行，不就完了嘛，是吧？在海外的华人，在这种情况下，最重要的是你要安全。第二，我们希望中共不打台湾，不打乌克兰，最好也别打台湾。
-
-再一个，我就希望共产党嘎嘣就完蛋。我们希望美国能通过现在的整个病毒溯源，认定共产党在全世界上不能代表中国人，中国人不等同于共产党。把这个做为全世界人民的共同认识。中国人和亚洲人之间也不要有这么多的仇恨和误会。然后，我们就要让全世界知道，病毒是共产党造的，跟中国人没关系。
-
-我们要通过这个来消灭共产党，这非常重要。接下来的事情，今年的变化太大了。水虎年呢，我觉的够习喝的。今明两年共产党再活下去的可能，我觉的很难了。2025年一定灭共。
-
-资料来源：2022年2月16日郭文贵先生大直播
-
-发布：tianzhihuan
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
