--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,19 +1,25 @@
 ---
-title: 一名50多岁的日本人在中共国被拘留
+title: 樱花FM┃澳防长预警：如不对抗中共 澳将失去未来十年
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2018279/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2018309/)
 
-撰稿：东京樱花团/百花李香
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1625.png)[图片来源](https://www.google.com.hk/imgres?imgurl=https%3A%2F%2F1.bp.blogspot.com%2F-Mhka2Dc8PJg%2FYTbOnZidp3I%2FAAAAAAAAELA%2FGwamae97kqEc89ThS84IgdzvCQPqhGPLwCLcBGAsYHQ%2Fs1250%2F07sept2021.jpg&amp;imgrefurl=https%3A%2F%2Fwww.chinaaid.org%2F2021%2F09%2Fccp-police-arre)
-去年12月，一名50多岁的日本男子在中国上海被当局扣留。现在仍在拘留中。他被拘留的原因和情况尚不清楚。中共国自2014年实施《反间谍法》以来，当局对外国人的拘押接连不断。
+音频：东京樱花团/战友520
+![](https://lh4.googleusercontent.com/vbhNTuHBqPYYoPPH9n8naGp7bm-a5q8bQNmgopGnRqF88Y-vu1aaRgB3SC_3YomJ4QSAq2VU-uEPgUx5qK3ow8XW2AOuXZoIdmgvWBWflY0nEc4GRo9bgwJmudhGa7Y_0BIBclvI)
+澳大利亚国防部长皮特·杜登（Peter Dutton）警告，澳大利亚及其盟国必须在南海议题上挺身抵抗中共国，否则将会“失去未来十年”。
 
-另外，据日本政府官员透露，一名70多岁的日本男子因在中国从事间谍活动被判处12年监禁，这名男子本月7日在北京一家医院因病死去。该男子2015年在北京被拘留，2018年12月在北京市第二中级人民法院被定罪。
+悉尼晨驱报2月7日头版报导，标题为“杜登表示我们必须挺身面对中共国”。杜登说，美国及其盟国过去一度采取“默许”态度，任由中共国在主权有争议的南海航道上兴建人工岛，以及在珊瑚礁上兴建防卫基地。
 
-信息源：[日本人の５０代男性を中国が拘束、理由や経緯は不明…服役中の７０代男性は北京で病死](text=%E6%97%A5%E6%9C%AC%E4%BA%BA%E3%)
+杜登认为，为了确保中共国不会重覆过去十年将南海军事化的做法，澳大利亚及盟国需要向中共国表明立场；他说，假如任由目前情况发展下去，澳洲及盟国将会“失去下一个十年”。
 
-*编辑：东京樱花团/喜马拉雅的微尘
+“四方安全对话”（Quad）外长会议将于本周在墨尔本举行，杜登发言与此有关。悉尼晨驱报表示，预料“四方安全对话”外长会议将会讨论美、日、澳、印四国该如何加强防卫及经济发展合作，以便对抗中共国。
+
+报导提到，专家认为，为了协助维护印太地区和平，澳洲未来国防预算势必要增加。澳洲去年国防预算为446亿澳元，占澳洲国内生产毛额（GDP）2.1%；对于澳洲军力是否足以协助维护印太地区和平，已引起防卫专家的担心。
+
+文字版原文：[澳防长预警：如不对抗中共 澳将失去未来十年](https://gnews.org/zh-hans/1968636/)
+
+*编辑：东京樱花团/asket
 发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
