--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,25 +1,32 @@
 ---
-title: 多数人认为特鲁多不能胜任国家领导职责
+title: 大直播后记：疫苗灾难导致的世界大变局
 ---
-`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/2018263/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2018301/)
 
-加拿大温哥华杨帆农场 枫叶快讯
+**整理：**奋斗、枫叶红了
+**编辑：**lili112333
+![](https://assets.gnews.org/wp-content/uploads/2022/01/12315456_4-2.png)
+再看全世界的疫苗，疫苗世界成了什么了？兄弟姐妹们，全人类就咱们爆料革命、新中国联邦（独好），咱是无苗有币族。我说过，疫苗灾难和疫苗次生灾难会超过一切。你看看澳大利亚、法国、加拿大，孩子、老人、妇孺全上街，这种人类上的辉煌的（运动），包括美国。
 
-采编撰稿： 薇文                校对编辑：硫酸羟氯喹64
+现在你看辉瑞，七哥跟你说什么，做空辉瑞、Moderna，医药公司医药股降了多少？你见过有一个人，一个群体像我们那么牛叉吗？如果你们听七哥的，你们得赚多少钱呢？而且我告诉你——辉瑞、Moderna和Facebook都会破产，还有什么推（特），一定会破产。只要人类上有一个人在它都会破产，我告诉你，它是没有任何争议的。
 
+就像我说，共产党一定会被消灭一样，没有任何存在的可能性。你想想共产党它怎么活呀？它怎么闭幕啊？冬眠会，它就是成啥了？你想想，现在卡车司机；你想想辉瑞、你想想Moderna、你想想这个国内的，卖6亿假疫苗——6亿假疫苗，赚了很多钱？但是这个钱赚得好。
 
-![](https://static.tnc.news/media/2022/01/website-af-29-696x365.jpg)图片来源：真北方
-据加拿大[真北方]2月16日报道，随着加拿大自由车队反抗强制疫苗政策的和平抗议进入第三周，越来越多的加拿大人对总理特鲁多的处理方式表示不满。
+还有一个，前天下午咱一位日本朋友跟我说，她说郭先生我没敢跟你说，日本人很老实，她说我先生和我作为政府官员都必须打，她说我们也没打疫苗。医生“嚓”就给喷到地上了。她说我们现在就是回家喝点小酒，就感谢Miles，感谢你。我们两个最不诚实的就是这次没打疫苗。那么同时她非常相信日本的那些卖疫苗的一定也会被追究（责任），走上绞刑架。
 
-最新民调显示，53%的加拿大人认为特鲁多在面对抗议活动时的拙劣反应，显示其在国家出现危机时表现出的软弱无能。其中有63%的人不会根据该总理处置自由车队事件的方式而再投票给他。
+法国，我们的战友，在医疗界的，他说：“郭先生，我可以看到马克龙走上绞刑架的感觉”。我可以预想到他被送上绞刑架。他说我们家都没打疫苗，也是政府官员，而且妻子家都是搞军火的。
 
-尽管主流媒体一边倒地打压和平抗议运动，但特鲁未能借此提升自己的公众形象。目前仅约30%的加拿大人认可他的表现，而多数人则认为他因激化了社会矛盾而再无资格成为自由党领袖和联邦政府总理，并应该对目前出现的危机负责。
+所以兄弟姐妹你看人类现在什么叫觉醒？这是多大的事！人类上一半的人被打了疫苗！他们可能处在一个生死不确定、得癌症随时死亡不确定的状态下，你觉得他（们）能放过这些媒体所谓的严肃媒体、黑暗的共产党势力，他能和共产党拉倒吗？
 
-校对编辑：硫酸羟氯喹64
+**资料来源：**2022年2月16日 文贵大直播
 
-发文：青青
+*发布：翼族*
 
-原文链接：[Poll finds half of Canadians believe Trudeau “not up for the job”](https://tnc.news/2022/02/15/poll-finds-half-of-canadians-believe-trudeau-not-up-for-the-job/)
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
