--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,21 +1,34 @@
 ---
-title: 疾控中心暗示強制口罩令将会于下周终止
+title: 2月16日大直播后记：2025一定灭共
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2018261/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2018292/)
 
-翻译：  Evalu
-![](https://assets.gnews.org/wp-content/uploads/2022/02/4-36.jpg)
-图片来源：www.cdc.gov
+整理：清水冷香、Lucy Liu
+编辑：小红帽
 
-零对冲网2月16日报道，已经有十多个州包括人口最多的加利福尼亚州已经自行决定加弃在公共场合要求戴口罩的命令，联邦机构直到现在才准备放弃口罩令，美国全国广播电台新闻（NBC)最早报道疾控中心(CDC)计划放弃联邦口罩令，或放松室内口罩的指令，最早可能在下周实行，CDC主任对NBC说：“还没有最后确定，但CDC将考虑一个新的基准，到底是否需要口罩，这将基于严重疾病的程度和社区住院情况而定。”
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-7.png)图片来源：雅典娜农场设计组（614）
 
-白宫急需CDC提供室内口罩的推荐，但不想因此向CDC施加压力，甚至福奇博士也因近期新冠病例急剧下降而建议放弃口罩令。
 
-NBC报道后没多久，CDC主任沃任斯基博士说口罩令指南将于二月下旬或三月初改变。
+川普是直接斗啊，叽叽喳喳地就来了，给你斗，明斗。拜登是在背后控制那个人啊，悄无声息地就过去了，这绝对是政治高手。这回习太阳（习近平）遇到了我认为国际政治上最厉害的普京（他的“Partner”）。这就吓人了，习太阳无法想象，接下来他将面对的对手。
 
-NBC新闻注意到多数州已经决定”转换策略”，因为新的办法，例如新冠的治疗已经能作用。
+就是在今年年底，欧洲的大选，法国的大选，英国上院下院，整个巴西，特别是美国的中期选举，共和党全部拿出来以后。共和党这几个新人了不得呀。兄弟姐妹们，这都是能人呐，都是天才呀。还有这个混不吝的班农，将成为主角中的主角。你想一想他们（共产党）怎么对付？
 
-##### 新闻来源： [Leading From Behind: CDC Hints COVID Mask Mandate Will End ‘Next Week’ Now That States Have Moved First](https://www.zerohedge.com/covid-19/leading-behind-cdc-hints-covid-mask-mandate-will-end-next-week-now-states-have-moved-first)
+现在告诉大家排华事件，排亚裔事件，会越来越严重，非常之可怕。大家一定要小心，个人破产是小事儿，你没命了，你有再多钱，那才是悲剧。人去天堂了，钱还在银行，不就完了嘛，是吧？在海外的华人，在这种情况下，最重要的是你要安全。第二，我们希望中共不打台湾，不打乌克兰，最好也别打台湾。
+
+再一个，我就希望共产党嘎嘣就完蛋。我们希望美国能通过现在的整个病毒溯源，认定共产党在全世界上不能代表中国人，中国人不等同于共产党。把这个做为全世界人民的共同认识。中国人和亚洲人之间也不要有这么多的仇恨和误会。然后，我们就要让全世界知道，病毒是共产党造的，跟中国人没关系。
+
+我们要通过这个来消灭共产党，这非常重要。接下来的事情，今年的变化太大了。水虎年呢，我觉的够习喝的。今明两年共产党再活下去的可能，我觉的很难了。2025年一定灭共。
+
+资料来源：2022年2月16日郭文贵先生大直播
+
+发布：tianzhihuan
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
