--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,34 +1,25 @@
 ---
-title: 2月16日大直播后记：喜币开启了人类金融智慧未来
+title: 多数人认为特鲁多不能胜任国家领导职责
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2018225/)
+`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/2018263/)
 
-整理：Anita、Lucy Liu
-编辑：小红帽
+加拿大温哥华杨帆农场 枫叶快讯
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-7.png)图片来源：雅典娜农场设计组（614）
+采编撰稿： 薇文                校对编辑：硫酸羟氯喹64
 
 
-喜币就是你越用越值钱，越搁越值钱，这是肯定的。它是有限制的。
+![](https://static.tnc.news/media/2022/01/website-af-29-696x365.jpg)图片来源：真北方
+据加拿大[真北方]2月16日报道，随着加拿大自由车队反抗强制疫苗政策的和平抗议进入第三周，越来越多的加拿大人对总理特鲁多的处理方式表示不满。
 
-你想想，任何国家的法币都没限制的印刷，这是多恐怖啊。现在共产党说承认自己干了46万亿人民币的印刷，事实上，100万亿也不拉倒。他用的纸和数据掠夺着你所有的血汗，这多恐怖！喜币让美国政府这回给了这个政策。美国人全面使用喜币，喜币合法流通和HPAY被广泛使用。
+最新民调显示，53%的加拿大人认为特鲁多在面对抗议活动时的拙劣反应，显示其在国家出现危机时表现出的软弱无能。其中有63%的人不会根据该总理处置自由车队事件的方式而再投票给他。
 
-兄弟姐妹们，在全世界有比在美国还安全的地方吗？唯一人类上只有喜币，喜交所让你拥有最顺畅的交易。你想想啊，Paypal是6.9%的手续费，Stripe可以把你的钱在6个月内给你拿走。你说这多吓人。6个月了都能把钱给你赎回呀。HPAY连0.6秒都没有，你付了就是付了,你自己承担责任。你把钱给我，你再也拿不回去了。兑现就不能改变，体现了货币的本质。
+尽管主流媒体一边倒地打压和平抗议运动，但特鲁未能借此提升自己的公众形象。目前仅约30%的加拿大人认可他的表现，而多数人则认为他因激化了社会矛盾而再无资格成为自由党领袖和联邦政府总理，并应该对目前出现的危机负责。
 
-大家看到赵长鹏还有美国美联储的政策,看到现在喜币美好的未来，还有看到这个价格，现在44,15美元。我可以告诉大家，喜币一定超过比特币，而且我告诉你，绝对还没开始呢。它重大的意义在于，开启了人类金融智慧的未来，是超出你们想象的。你们不知道它未来能给你们带来什么？你们真的不懂。
+校对编辑：硫酸羟氯喹64
 
-兄弟姐妹们再过上个半年，你今天对喜币的理解都会认为是个笑话。就像一年前，开始推出喜币的时候，欺民贼伪类说，“这就是骗局根本不可能上线，永远不可能，拿钱就跑了。”然后说，“根本不可能上线，又推迟了吧，又晚了吧，就是骗钱嘛。”然后上线时，“你看到没有，三天后全都跌破，跌破0没人买。然后一星期，一星期肯定会跌啊。永远不会涨价。”然后说，“有币，有币没有人兑现。”我们的娜娜酱缺钱了，币卖了，买了设备开始直播。这是真的，能不能兑现？能不能提现？只有你们知道。
+发文：青青
 
-资料来源：2022年2月16日郭文贵先生大直播
-
-发布：tianzhihuan
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+原文链接：[Poll finds half of Canadians believe Trudeau “not up for the job”](https://tnc.news/2022/02/15/poll-finds-half-of-canadians-believe-trudeau-not-up-for-the-job/)
 
  
 
