--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,39 +1,21 @@
 ---
-title: 中共虚张声势的新型“机器人牦牛”将支持地面部队工作
+title: 疾控中心暗示強制口罩令将会于下周终止
 ---
-`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/2018224/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2018261/)
 
-国防和安全问题作家：KYLE MIZOKAMI
-发布日期：2022年02月16日
-新闻来源：https://www.popularmechanics.com/
-翻译：V 在途中
+翻译：  Evalu
+![](https://assets.gnews.org/wp-content/uploads/2022/02/4-36.jpg)
+图片来源：www.cdc.gov
 
-- **根据中共国官方新闻机构的报道，中共推出了一种四足机器牦牛，据称它可以承载与两只真正的牦牛一样多的货物。**
-- **仔细查看视频后，看起来机器牛的能力被夸大了。**
-- **中共似乎想用机器人来支持地面部队，而不仅仅是运送补给——该新闻机构似乎隐瞒了其他一些东西。**
+零对冲网2月16日报道，已经有十多个州包括人口最多的加利福尼亚州已经自行决定加弃在公共场合要求戴口罩的命令，联邦机构直到现在才准备放弃口罩令，美国全国广播电台新闻（NBC)最早报道疾控中心(CDC)计划放弃联邦口罩令，或放松室内口罩的指令，最早可能在下周实行，CDC主任对NBC说：“还没有最后确定，但CDC将考虑一个新的基准，到底是否需要口罩，这将基于严重疾病的程度和社区住院情况而定。”
 
+白宫急需CDC提供室内口罩的推荐，但不想因此向CDC施加压力，甚至福奇博士也因近期新冠病例急剧下降而建议放弃口罩令。
 
-中国工程师正在开发一种大型的四足机器人“牦牛”，据称它能够拖运与两只真正的牦牛一样多的货物。这个未命名的机器人似乎注定要用于军事用途，类似于位于马萨诸塞州沃尔瑟姆的波士顿动力公司在过去十年中推广的机器狗概念，但仔细看视频，可能只是中共的宣传。
+NBC报道后没多久，CDC主任沃任斯基博士说口罩令指南将于二月下旬或三月初改变。
 
-该机器人由四个细长的腿和桶形身体支撑，顶部装有一个载货金属架。*中共新闻机构《环球时报》*声称，它最多可以携带 160 公斤（352 磅）的物品，并以每小时 6.21 英里的速度行驶。它援引中共新闻网站*《人民日报*》的话说，该机器人是“世界上最大、最重、最具越野能力的同类机器人”。
+NBC新闻注意到多数州已经决定”转换策略”，因为新的办法，例如新冠的治疗已经能作用。
 
-*《环球时报》*说，该机器人“对包括台阶、沟渠和悬崖在内的各种地形，更不用说泥泞的道路、草原、沙漠和雪地，表现出非常强的适应能力。” 这表明，该机器牦牛有一个激光雷达传感器，可以感知下落，如沟渠和悬崖。这也就不足为奇的表明：即使是今天的商用机器人，如[Roborock S5](https://go.redirectingat.com/?id=74968X1525083&amp;url=https%3A%2F%2Fus.roborock.com%2Fpages%2Froborock-s5-max&amp;sref=https%3A%2F%2Fwww.popularmechanics.com%2Fmilitary%2Fweapons%2Fa39026037%2Fchinas-new-robotic-yak%2F&amp;xs=1&amp;xcust=%5Butm_source%7C%5Butm_campaign%7C%5Butm_medium%7C%5Bgclid%7C%5Bmsclkid%7C%5Bfbclid%7C%5Brefdomain%7C%5Bcontent_id%7C3ee58db0-b31d-4daf-9ef3-5ba128e88621%5Bcontent_product_id%7Cf672096c-09a3-4c9a-803a-63507d85fc6e%5Bproduct_retailer_id%7C)，也具有此功能。泥泞的道路、草原、沙漠和雪原都是天生的平坦地形，因为障碍物很少。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2165.png)视频显示，这只机器牛似乎正朝着一条布满岩石的小路前进，但随后又切入了一个新的场景。但这没关系，因为无论如何它显然只是在一条土路上，相机角度使它看起来像是朝着岩石前进。
-
-精心剪辑的视频表明机器牦牛在障碍物方面存在严重问题，例如岩石和丘陵地形。视频显示，机器牦牛正在穿越沙漠，有人通过遥控器控制它。这一切似乎都令人印象深刻，直到您意识到大部分实际镜头都是机器牦牛在笔直平坦的地形或铺砌的斜坡上行走。
-每次牦牛前往未铺砌的地形，尤其是散布着岩石或未铺砌的斜坡的地形时，视频都会切换到一个新场景。在一个场景中，机器牛似乎正在崎岖的地形上行走，但仔细观察后，我们实际上无法看到机器牛正在行走的地方。
-该视频还试图掩盖机器牦牛的军事背景。视频中散布在机器人前面的横幅模糊不清，这是一件奇怪的事情。然而，在视频的另一点可以看到其中的一部分，并显示了一辆带有坦克状炮塔的轮式车辆。这表明中国军方可能对这种机器耗牛有更多的想法，而不仅仅是运送物资。
-
-无论这只机器牦牛的命运如何，它至少比五角大楼的机器宠物项目落后十年。 2012 年，海军陆战队和国防高级研究计划局 (DARPA)测试了Four-Legged Robot
-小队支援系统 (LS3)。 LS3 由波士顿动力公司开发，重 800 磅，可运载 400 磅货物，航程 20 英里。 LS3 甚至可以通过语音命令进行控制。
-更好的是，LS3 在应对崎岖地形方面要好得多。在上面的视频中，LS3 可以轻松穿越岩石地形、攀登岩石山丘并直接穿过灌木丛。
-Robo-yak 不会很快布置到任何地方，原因与海军陆战队从未追求 LS3 的原因相同：机器人依靠电池运行，一旦电池耗尽，它需要在一个有充足电力的地方充电几个小时。如果电池技术可以使腿式机器人的运行距离增加三倍，那么不久之后我们就可以在战场上看到它们。与此同时，机器牦牛的工程师们也有足够的时间来解决中共《人民日报》努力掩盖的缺陷。
-
-新闻来源：[China’s New ‘Robotic Yak’ Will Support Ground Troops, But It’s Not as Capable as It Seems](https://www.popularmechanics.com/military/weapons/a39026037/chinas-new-robotic-yak/)
-
-审核校对：Barry Jack
-上传排版：V在途中
+##### 新闻来源： [Leading From Behind: CDC Hints COVID Mask Mandate Will End ‘Next Week’ Now That States Have Moved First](https://www.zerohedge.com/covid-19/leading-behind-cdc-hints-covid-mask-mandate-will-end-next-week-now-states-have-moved-first)
 
  
 
