--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,49 +1,29 @@
 ---
-title: 热点回顾：为什么辉瑞疫苗没有在印度上市？
+title: 美指责中共国未履行承诺 将促其改变经贸行为
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2018173/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2018240/)
 
-翻译：文斗
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-275.jpg)
-**热点回顾：为什么辉瑞疫苗没有在印度上市？**
+![资料照：美国贸易代表戴琪](https://gdb.voanews.com/35FC463E-0E71-475E-98AD-EFE9D6CC3A46_w1023_r1_s.jpg)资料照：美国贸易代表戴琪
+据美国之音2月16日报道，美国贸易代表办公室16日向国会提交中共国自2001年加入世贸后有关遵守世贸组织规则的年度评估报告。指责中共国没有履行加入世界贸易组织的承诺，没有向外国竞争者开放市场。报告列举了中共国种种不公平的经贸行为，以及中共国未能履行美中第一阶段贸易协议。
 
-2月16日，thegatewaypundit网站发表回顾文章并提出疑问：为什么辉瑞疫苗没有在印度上市？
+美国前总统川普2020年1月与中共达成第一阶段贸易协议，对中共国价值3600亿美元的进口产品征收关税，中方承诺增加购买美国的农产品。但中共国未能兑现承诺，只完成了承诺的57%。美方表示要寻找新的战略及更新国内贸易手段，对抗中共国由国家主导的非市场政策和经济行为。
 
-2021年2月，在印度医药监管机构要求进行当地的安全性和免疫原性研究之后，辉瑞公司撤回了其COVID-19疫苗在印度的紧急使用授权申请。
+如果用西方遵循的兑现承诺、履行职责等等作为与中共交往的原则，收获的永远是失望。除了偷你的没商量、拿你的不通报，中共说过的话连标点符号都不能信。为了达到目的，中共可以欺骗全世界；为了毁掉契约，中共可以翻脸不认人。答应好的贸易协定没有完成，制定方案，采取措施，打击中共，打疼了中共才会长记性。
 
-去年，印度的COVID-19主题专家委员会（SEC）在一次会议上审查了辉瑞公司提交的数据。该委员会没有推荐辉瑞公司的疫苗，原因是国外报告的严重不良事件以及该公司缺乏针对印度人口的安全性和免疫原性研究。
+新闻参考链接：[https://www.voachinese.com/a/ustr-says-new-trade-tools-needed-to-fight-china-state-led-trade-20220216/6444187.html](https://www.voachinese.com/a/ustr-says-new-trade-tools-needed-to-fight-china-state-led-trade-20220216/6444187.html)
 
-当地试验是印度在有新疫苗时实行的标准程序，以确定其安全性以及在其公民中产生免疫反应。然而，根据印度的规定，在某些情况下可以放弃这种试验。
+编辑：胖丁
 
-该决定将影响辉瑞公司COVID-19疫苗的上市，辉瑞疫苗将不能在印度和中国这两个世界上人口最多的国家销售。
+* * *
 
-与其他公司为外国疫苗在印度进行小规模研究不同，辉瑞公司以其在美国和德国进行的试验获得了其他国家批准为由寻求例外。
-
-辉瑞公司在一份声明中说：“根据会议的审议情况以及我们对监管机构可能需要的额外信息之理解，公司决定此时撤回其申请。”
-
-“辉瑞公司将继续与监管机构接触，并在不久的将来获得更多信息后重新提交其批准申请。”
-
-现在，一年过去了，没有辉瑞重新申请的后续信息。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2-73.jpg)
-截至2月16日，该文章上获得了152万次访问，在盖特上有大量评论与转发，表达其对辉瑞隐瞒信息的猜测以及对疫苗安全的质疑。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/6-25.jpg)
-（[https://www.gettr.com/post/puxg0m1ffa](https://www.gettr.com/post/puxg0m1ffa%EF%BC%89) 那么，印度意识到了不利影响，而我们却没有？）
-![](https://assets.gnews.org/wp-content/uploads/2022/02/7-22.jpg)
-（[https://www.gettr.com/post/puwqtm8655](https://www.gettr.com/post/puwqtm8655) 辉瑞公司必须公布所有的数据，而且必须是不加处理过的。）
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8-22.jpg)
-（[https://www.gettr.com/post/puwa9x6d5a](https://www.gettr.com/post/puwa9x6d5a) 基本上就是，印度要求辉瑞公司证明其疫苗的安全性和有效性，而辉瑞公司没有这样做（因为他们当然不能），而是直接撤回了在印度使用其疫苗的申请……那可是世界上人口第二多的国家！！ 他们宁愿承担经济损失，因为他们知道他们无法满足印度使用该产品的要求……
-
-但是，用在美国人身上就可以了）
-
-新闻来源：
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
 
+编辑：【英国伦敦喜庄园编辑部】
 
-> [Flashback: Pfizer Withdraws COVID Vaccine Application in India After Regulators Demand Local Safety and Immunogenicity Study](https://www.thegatewaypundit.com/2022/02/pfizer-withdraws-covid-vaccine-application-india-regulators-demand-local-safety-immunogenicity-study/)
-
-
-
-[https://mosnews.orkmail.com/statistics/link/post20220216\_2317F500D1.repost.html](https://mosnews.orkmail.com/statistics/link/post20220216_2317F500D1.repost.html)
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
