--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,21 +1,34 @@
 ---
-title: 渥太华警察局长在自由车队抗议浪潮下辞职
+title: 2月16日大直播后记：喜币开启了人类金融智慧未来
 ---
-`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/2018146/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2018225/)
 
-加拿大温哥华杨帆农场 枫叶快讯
+整理：Anita、Lucy Liu
+编辑：小红帽
 
-采编： UCool 优酷       编译撰稿：文明(添草灭共)
-![BREAKING: Ottawa Police Chief resigns](https://imgcache1.thepostmillennial.com/content/images/2022/02/ARTICLE-PHOTO--37--1-1.jpg)图片来源：thepostmillennial.com crypto
-据加拿大自媒体【后千禧年】2月15日报道，在卡车司机集结于渥太华市中心进行抗议活动的第 19 天，该市警察局长[斯洛利]宣布辞职。 报道称，[斯洛利]不久前还曾表示要争取更多警力和资源来结束抗议活动，并且没有任何辞职的计划。虽然未透露原因，但外界普遍认为该局长在全国“自由车队”反疫苗护照的浪潮下，承受着巨大压力。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-7.png)图片来源：雅典娜农场设计组（614）
 
-此前，渥太华警方因参与冻结卡车司机的筹款而被各方谴责。对此，“宪法自由司法中心”不仅指出抗议活动没有扰乱秩序，还抨击了警方对和平集会的污名化没有任何事实和证据。但当局以恢复秩序为借口，企图剥夺加拿大人在首都行使《宪章》所规定的自由表达、结社以及和平集会的基本权力。
 
-校对编辑：硫酸羟氯喹64
+喜币就是你越用越值钱，越搁越值钱，这是肯定的。它是有限制的。
 
-发文：青青
+你想想，任何国家的法币都没限制的印刷，这是多恐怖啊。现在共产党说承认自己干了46万亿人民币的印刷，事实上，100万亿也不拉倒。他用的纸和数据掠夺着你所有的血汗，这多恐怖！喜币让美国政府这回给了这个政策。美国人全面使用喜币，喜币合法流通和HPAY被广泛使用。
 
-原文链接：[https://thepostmillennial.com/breaking-ottawa-police-chief-resigns-source](https://thepostmillennial.com/breaking-ottawa-police-chief-resigns-source)
+兄弟姐妹们，在全世界有比在美国还安全的地方吗？唯一人类上只有喜币，喜交所让你拥有最顺畅的交易。你想想啊，Paypal是6.9%的手续费，Stripe可以把你的钱在6个月内给你拿走。你说这多吓人。6个月了都能把钱给你赎回呀。HPAY连0.6秒都没有，你付了就是付了,你自己承担责任。你把钱给我，你再也拿不回去了。兑现就不能改变，体现了货币的本质。
+
+大家看到赵长鹏还有美国美联储的政策,看到现在喜币美好的未来，还有看到这个价格，现在44,15美元。我可以告诉大家，喜币一定超过比特币，而且我告诉你，绝对还没开始呢。它重大的意义在于，开启了人类金融智慧的未来，是超出你们想象的。你们不知道它未来能给你们带来什么？你们真的不懂。
+
+兄弟姐妹们再过上个半年，你今天对喜币的理解都会认为是个笑话。就像一年前，开始推出喜币的时候，欺民贼伪类说，“这就是骗局根本不可能上线，永远不可能，拿钱就跑了。”然后说，“根本不可能上线，又推迟了吧，又晚了吧，就是骗钱嘛。”然后上线时，“你看到没有，三天后全都跌破，跌破0没人买。然后一星期，一星期肯定会跌啊。永远不会涨价。”然后说，“有币，有币没有人兑现。”我们的娜娜酱缺钱了，币卖了，买了设备开始直播。这是真的，能不能兑现？能不能提现？只有你们知道。
+
+资料来源：2022年2月16日郭文贵先生大直播
+
+发布：tianzhihuan
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
