--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,28 +1,35 @@
 ---
-title: 大直播后记：冬眠会是共产党灭亡的开始
+title: 2022.2.16大直播后记：中国人有精神上的防火墙
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2018125/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2018149/)
 
-整理：奋斗、枫叶红了
-编辑：文泓
+**整理：Anita、Lucy Liu
+编辑：Candy**
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/10-20.png)图片来源：墨尔本雅典娜农场设计组
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/直播.png)
 
 
-另外一个就看中国的经济。中共国现在整个的银行业有二十几家商行破产，二百多家银行等待破产。房地产行业过去的将近二十多家大企业破产，两万家的小企业破产，再有两千家在等待破产。中共印了将近50万亿人民币，他自己也承认就是印出来的，就是复印复制出来的人民币，用以抢夺人民的财富。导致的中国经济现在通胀通缩严重，而且银行和存户之间的这种存贷关系随时可能暴雷（挤兑）。中共国经济模式实在是太可怕了。
+共产党确实很邪恶，也确实很“了不起”，能让十几亿人变成这个样子。把十几亿人、哪怕一亿人变成聪明人都很难，但你要把十几亿人变成都听话的人，那比登天都难，共产党真做到了。14亿中国人就能听它胡说八道，这已经不能用任何语言悲剧来形容了。
 
-更重要的，大家看到一个所谓的北京冬奥会已经开成国际笑话了，现在叫烂尾冬奥会，它咋收场呢？还怎么开闭幕会呢？谁去闭幕会呢？是吧。2008年奥运会有204个国家参加开幕式，然后现在是4个国家，严格讲就两个国家、两个国家元首去了；从法律上来讲就一个国家，就是普京，是正元首，就是普京一个人；阿布扎比王储（是）真正的说话人，但是他还不是法定的总统，他哥（国家元首）还躺着呢，对吧。严格讲国家元首只有一个，这很恐惧的。
+你看追寻自由（网名）的脸就长开了，看看大陆人的长相，Bunny，脸没长开，没长开是身边的环境让他没长开。中国是一个有精神上的防火墙的，精神上已经被防火墙了！很多人说防火墙真的没有太大的用，它是推动这件事的罪魁祸首，但是没有互联网以前，中国人没有防火墙、没有互联网，中国人就聪明吗？到了海外的中国人，没有防火墙了，你觉得他就开智了吗？
 
-那么运动员呢，这是有史以来体验最差的一次奥运会。运动员离开北京，现在开始骂共产党了。然而共产党现在已经开始启动了内宣机器了，大外宣还没开始。内宣机器说，运动员“没有离开，已经想念”，这没上床呢，已经说需要再来一次高潮。这王八蛋不要脸到极致了啊。在这种情况下，大家看到它是没有闭幕式了。而且这个闭幕式将开启共产党的被消灭的终结之战，你走着看。全世界最后会看到共产党，因为冬奥会是它一个象征性的灭亡的开始，运动员永远不会拉倒的，他们在北京受的苦受的屈辱，不会拉倒的，一直到共产党被消灭为止。
+一个国家一个民族任何一个人，最可怕的跟你身边相处的人，一旦这个人没有受过好的教育，他再没有信仰，这人对你来讲几乎是你的炸弹，都是危险。所有的问题就是没有一个好的教育的社会是很可怕的，就像七哥如果没有经历过清风看守所，我可能就是那个买锁链女或者干卖锁链女，什么事我都可能干得出来。不会是养Snow，我会去吃Snow的那种人。因为你没有被教育，你就是最粗鲁的。然后七哥有了信仰。你要说吃狗七哥简直是心都碎了！一看到锁链女心都碎了！为什么？我有信仰！
 
-资料来源：[2022年2月16日 文贵大直播](https://gettr.com/streaming/puvpmn3ce1)
+你去想想，追寻自由刚才的话给旁边人说，所有不信的人，他是被另外一种洗脑教育了，叫科学迷信，叫科学主义。还有对所有的所谓中立媒体的那种被虐待，连加拿大CBS、英国BBC、美国CNN，澳大利亚的Seven电视台，瞪眼撒谎，全世界媒体撒谎。老百姓被所谓的媒体主义、中立媒体主义、未定义的媒体和严肃媒体彻底的洗脑。所以追寻自由，你说他们不听啊，他成了恶魔恶缘。
 
-发布：tianzhihuan
+我们新中国联邦一上来就干得最了不起的事情，就是唯真不破，大家就是做自己（Be yourself）。说实话，你看到任何事情的结果都是不一样的。最重要的事情，我们的直播。
 
-更多资讯，请关注：
+昨天我一个多年的老友给我发信息，我又笑快晕了：“哎呀七哥，你一播就是几个小时，你也不准备准备，不打草稿？”这几年七哥的直播，爆料革命的直播就是唯真不破，不打草稿，没有任何的事情。
+
+所以说兄弟姐妹们，你们听的看的想问的这些东西，最可怕的一个根本原因就是人被洗脑了，没有教育、没有信仰的基础。中国人有多少郭文贵这样有勇气的人？我不是自我感觉好啊，真不多！在你有生之年看到，不会太多。
+
+***发布：Candy***
+
+**更多资讯，请关注：**
 [澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
 [澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
 [澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
