--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,20 +1,29 @@
 ---
-title: 雅典娜时报-第207期
+title: 一位卡车司机表示：特鲁多引发了内战 让加拿大变成了共产主义国家
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2018045/)
+`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2018073/)
 
-#### 《雅典娜时报》汇聚全球新闻时事
+翻译：冰糖葫芦喵
 
-#### 编辑：精灵蓝
-排版：小蚂蚁614
-![圖片](https://media.discordapp.net/attachments/825592691433668612/943675811733598218/155_5.png?width=812&amp;height=1209)![圖片](https://media.discordapp.net/attachments/825592691433668612/943675812253696021/155_6.png?width=812&amp;height=1209)
-*发布：陶子*
+编辑与校对：冰糖葫芦喵、灭共文明
 
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+《布莱巴特新闻网》2月16日报道，**一位在渥太华参加自由车队游行的卡车司机、罗马尼亚裔加拿大人克里斯蒂安（Christian）在接受采访时表示，特鲁多正在加拿大人之间播下仇恨的种子，并将这个国家变成一个共产主义国家。**
+
+他补充说，**这里不再是加拿大了。这是一个共产主义国家。特鲁多在分裂人民，憎恨人民。这是一场内战。**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/罗马尼亚卡车司机.jpg)罗马尼亚裔加拿大卡车司机接受布《莱巴特新闻》采访
+克里斯蒂安指出，省级和联邦政府强制实施的**中共病毒疫苗政策**，表面上是为了“公共卫生”和“公共安全”，但实际上这些政策**正在破坏人们的生计，并剥夺他们谋生的权利。**
+
+这位卡车司机还说，作为应对中共病毒措施而推广的**政府法令已经导致企业倒闭，普通民众个人破产，并导致许多人失去工作。**
+
+这时克里斯蒂安深思道，当我来到这个国家时，我觉得它很美。加拿大充满了不可思议和许多可爱的人。
+
+采访中，克里斯蒂安说：“我们需要工作，需要最基本的生存保障。但现在因为特鲁多失去了一切。**特鲁多不会让我们生活，不会让我们回到工作岗位，回到家人身边，不会让我们像以前那样生活。”**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/特鲁多内战2.jpg)图片来源：网络。
+**最后他悲叹道:“现在看看我们这个社会，大家彼此憎恨。**我的儿子不能见他的祖父，因为他接种了疫苗，而他的祖父没有接种疫苗，所以他不能回到祖父的家。他很伤心。”
+
+**新闻链接：**
+
+[Romanian-Canadian Trucker: Trudeau Turned Canada to Communist State (breitbart.com)](https://www.breitbart.com/clips/2022/02/16/exclusive-video-romanian-canadian-trucker-trudeau-has-caused-civil-war-turned-canada-communist/)
 
  
 
