--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,31 +1,25 @@
 ---
-title: 新中国联邦新闻、GTV新闻访谈简报&#124;2022年2月16日晚
+title: 加拿大感病毒感染死亡者多数已完全接种疫苗
 ---
-`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/2017977/)
+`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/2017987/)
 
-作者：香草山翻译部
+加拿大温哥华杨帆农场 枫叶快讯
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2-GNEW-GTV-MOS-LOGO-1.jpg)
+采编/编译撰稿：  自由法兰西
 
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/text-SC-2-1.png)
-校对：Stay文苑
+![](https://i0.wp.com/dailyexpose.uk/wp-content/uploads/2022/02/image-279.png?resize=639%2C484&amp;ssl=1)图片来源：dailyexpose.uk
+据英国媒体《每日内幕》2月15日报道，加拿大政府最近公布的官方数据表明，该国近期因“新冠病毒”感染而死亡的人数已超过了此前在未大规模接种疫苗的疫情期间，因相同原因而死亡人数的总合。同时，在新增死亡病例中，大多数都是已完全接种疫苗者。
 
-编辑：Stay文苑
+报道称，以今年1月16日至22日当周数据为例，在每10位住院的病毒感染患者中，完全接种者占7例；而每10起死亡病例中，完全接种者也占7成。此外，加拿大各地在今年1月记录的死亡人数，几乎等同于在疫苗接种尚未普及的疫情时期，感染死亡病例数的总合。
 
-发稿：Stay文苑
+所有事实都证明，当局所谓“新冠病毒”疫苗可以降低95%的住院和死亡率是个彻底的欺世谎言。加拿大目前正处于“因全员接种疫苗后而引起病毒大感染”的灾难之中，而政府却正在试图掩盖这些令人震惊的数据，以逃避即将被全民追责的结局。
 
-新闻：[https://gtv.org/broadcast/watch/620da5f3432ae869226e07c3](https://gtv.org/broadcast/watch/620da5f3432ae869226e07c3)
-访谈：[https://gtv.org/broadcast/watch/620dae96432ae869226e0cc8](https://gtv.org/broadcast/watch/620dae96432ae869226e0cc8)
+校对编辑：硫酸羟氯喹64
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-calendar-1.png)
+发文：青青
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+新闻来源: [https://dailyexpose.uk/2022/02/15/canada-covid-deaths-70-percent-vaccinated/](https://dailyexpose.uk/2022/02/15/canada-covid-deaths-70-percent-vaccinated/)
 
  
 
