--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,23 +1,24 @@
 ---
-title: 樱花FM┃以色列逐渐废除疫苗护照
+title: 美官员提醒：警惕俄罗斯撤军是虚晃一枪的阴谋
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2018352/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/2018378/)
 
-音频：东京樱花团/战友520
-![](https://lh4.googleusercontent.com/tVWHCnKhBL3PvKHdcArWDp04pui1WxXSokUwJc-Vy4zLSXGysE3sxsdxn0mVmquwhq7NFRvtBTeCqKconQVaEsi504U24EQ-hqpH2TSmPsOpKDliRKsHObY3hV2_DBfGI5X7jyYj)
-随着中共病毒（新冠病毒Covid-19）感染人数的下降，以色列放宽规定，许多地方不再需要出示疫苗接种证明。
+撰稿：文西Eric
+![](https://assets.gnews.org/wp-content/uploads/2022/02/171.jpg)图片来源于网络
+据独立报(The Independent)报道，美国国务院顾问德里克-乔莱(Derek Chollet)说：乌克兰军队比2014年与俄罗斯支持的分裂分子战斗期间强大得多，如果俄罗斯入侵乌克兰，乌军将让俄军付出血的代价。
 
-在以色列，从7日起，在餐厅、电影院、健身房、酒店等场所，不再需要出示“绿色通行证”的疫苗接种证明。尽管一些室内集会活动场所和俱乐部仍然需要“绿色疫苗护照”，但将取消对户外聚会和商业设施人数的限制以及对餐厅餐桌间距的限制。
+乔莱先生认为莫斯科撤出一部分部队并不是化解当前对抗的真正举措，事实上，俄军在军队布置方面有进一步升级的迹象。有证据表明，俄罗斯将通过栽赃嫁祸（假旗行动）或某种破坏行动，为在乌克兰的军事行动提供借口。这是多年来俄罗斯试图愚弄我们的一种尝试，我们不会被他们愚弄。
 
-卫生部解释说，感染高峰正在过去，即使接种过疫苗的人也会感染Omicron毒株，因此已经失去了监管的有效性。
+克里姆林宫周二宣布，俄正在从乌克兰边境撤出一些部队，以此表明俄是寻求缓解紧张局势的。然而，美国和盟国坚持认为，战争危机仍然存在。北约秘书长延斯-斯托尔滕贝格(Jens Stoltenberg)在布鲁塞尔举行的成员国国防部长会议上宣布，北约正在考虑向东欧部署更多的战斗群，以补充由英国、加拿大、德国和美国领导的在爱沙尼亚、拉脱维亚、立陶宛和波兰的战斗群。
 
-在以色列，上月底每天新增感染人数超过8.3万人，但最近已降至3.3万人左右。
+法国政府已经提出要在罗马尼亚领导一个战斗小组。英国政府还宣布，它将把驻爱沙尼亚的部队规模扩大一倍，增加部队、装甲战车和坦克。阿帕奇武装直升机将与盟国进行演习，另外四架台风飞机将被派往塞浦路斯，在俄罗斯边境附近的天空进行巡逻。钻石号将与特伦特号一起加入地中海东部的NATO舰艇。
 
-文字版原文：[以色列逐渐废除疫苗护照](https://gnews.org/zh-hans/1968308/)
+郭先生在2月16日提到普京老奸巨猾，这次部分撤军极有可能是虚打一枪，而乌俄一旦开战，习二极有可能对台湾开战。希望这次西方能给与俄罗斯足够的压力，迫使俄放弃这次阴谋，也毁掉习皇帝“武统台湾”的痴心妄想！
 
-*编辑：东京樱花团/asket
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+新闻来源：[The Independent](https://www.independent.co.uk/news/world/europe/russia-ukraine-invasion-putin-nato-b2016781.html)
+
+*发稿：mgjxs*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
