--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,21 +1,30 @@
 ---
-title: 樱花FM┃篮球明星坎特再开炮 北京冬奥网络收视少上届43％
+title: 中共国成为法国总统府调查外国渗透的目标
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2018310/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2018360/)
 
-音频：东京樱花团/战友520
-![](https://lh4.googleusercontent.com/i6xFLsaj8cGP1ZhiEYFEROkWfS5jxlWAurHyN4zW8bSmRFPYkig8Q_r9psnmxP8Uqc8pJqPc9fzGdq9plvcZLUriVftK9-KyFRjmCJo3DqSC4V9XywgMhu9oTSovEf68gsHQjPb8)
-2月7日，篮球明星坎特再度于脸书开炮，指称2022北京冬奥的开幕式仅有16Ｍ（1,600万）人观看，并且全时段直播的观众人数都很少。相较于上一次2018年2月的平昌冬奥有28.3M（2,830万）的观看人数，北京冬奥低了43％。
+![法国总统府又遇麻烦？ 疑似府内强奸案媒体曝光- 国际新闻、加拿大新闻| 蒙城时报](https://s.rfi.fr/media/display/d970fb10-210e-11ec-a711-005056a90284/w:1280/p:16x9/bb7e9135bb8a28d2521ff0689b1557732acb0a16.jpg)法国总统府（资料照）
+据法国国际广播电台2月16日报道，法国财政总监察局（IGF）向政府提交了一份受到法国国防机密保护的文件，”在高等教育和科学研究领域保护知识和技术的挑战 “，聚焦中共国势力对法国高等教育机构的渗透。
 
-坎特也直接怒呛北京称，“这就是你们把田径比赛变成替邪恶帝国作政治宣传的结果”（This is what you get for turning athletics into propaganda for an EVIL EMPIRE）。
+这份文件是基于对法国各大学校长的约20次采访，调查显示：中共国是最主要的渗透来源国。与中共国国防密切相关的七大院校成为关注焦点，其中最引人注目的是哈尔滨工业大学（HIT）。与中共国电信巨头华为合作紧密的巴黎电信学院以及法国原子能研究中心也受到调查人员的监督。
 
-事实上，坎特这几日都未曾停止在脸书挞伐中共，他持续在贴文中表示“人们要我专注在篮球上，不要搞政治，但我从未搞政治，政治和人权存在著差别”。“我们不能在面对不正义时保持沉默，世界需要清醒起来，认知到中国共产党并不是我们的朋友”。坎特过去曾多次就新疆、彭帅等问题批评中共，日前更杠上中共篮球协会主席的姚明，不仅指姚明封锁自己IG的行为很像小孩，还酸其“身高高心眼小”，喊话姚明“停止当中共的傀儡”。
+军民联合、学者访问、扩建分校等等，是中共重要的获取情报和知识产权的间谍手段。华为已经被证实是中共的军工企业。法国是最早被中共渗透的国家之一，海航前董事长王健就是在法国被害身亡。中共在法国的势力如果不被打掉，法国不会安宁。
 
-文字版原文：[篮球明星坎特再开炮 北京冬奥网络收视少上届43％](https://gnews.org/zh-hans/1968547/)
+链接：[https://www.rfi.fr/cn/中国/20220216-法国总统府下令调查外国渗透-中国再度成为目标](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20220216-%E6%B3%95%E5%9B%BD%E6%80%BB%E7%BB%9F%E5%BA%9C%E4%B8%8B%E4%BB%A4%E8%B0%83%E6%9F%A5%E5%A4%96%E5%9B%BD%E6%B8%97%E9%80%8F-%E4%B8%AD%E5%9B%BD%E5%86%8D%E5%BA%A6%E6%88%90%E4%B8%BA%E7%9B%AE%E6%A0%87)
 
-*编辑：东京樱花团/asket
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+编辑：胖丁
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+
+
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
