--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,21 +1,19 @@
 ---
-title: 樱花FM┃澳防长预警：如不对抗中共 澳将失去未来十年
+title: 樱花FM┃立陶宛外长今访澳 坚称不会更名台湾代表处
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2018309/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2018353/)
 
 音频：东京樱花团/战友520
-![](https://lh4.googleusercontent.com/vbhNTuHBqPYYoPPH9n8naGp7bm-a5q8bQNmgopGnRqF88Y-vu1aaRgB3SC_3YomJ4QSAq2VU-uEPgUx5qK3ow8XW2AOuXZoIdmgvWBWflY0nEc4GRo9bgwJmudhGa7Y_0BIBclvI)
-澳大利亚国防部长皮特·杜登（Peter Dutton）警告，澳大利亚及其盟国必须在南海议题上挺身抵抗中共国，否则将会“失去未来十年”。
+![](https://lh3.googleusercontent.com/qcAp5j-W5PlFtxWxEfPRCl3z9JJwJwW1u7OQq0MSgkZTM3f-DKE2Mz_iMp8ogvMHaeLhjkSZ-XNsCmUC2J_vGWdy01Mkd4n9w9SOqd3tuU2yWfSLERgle38eotZ2f5h45ZHHqJAk)
+立陶宛外长蓝斯柏吉斯（Gabrielus Landsbergis）于2月6日至10日，将先后访问新加坡、澳大利亚，开拓亚洲及大洋洲市场。据自由时报2月6日引述消息报道说，立陶宛外长蓝斯柏吉斯（Gabrielus Landsbergis）重申不会屈服中共经济胁迫。
 
-悉尼晨驱报2月7日头版报导，标题为“杜登表示我们必须挺身面对中共国”。杜登说，美国及其盟国过去一度采取“默许”态度，任由中共国在主权有争议的南海航道上兴建人工岛，以及在珊瑚礁上兴建防卫基地。
+立陶宛外长蓝斯柏吉斯访澳前夕，接受《澳洲金融评论报》独家专访指出，立陶宛与澳大利亚此次交流议题将聚焦中共的胁迫和贸易制裁，立澳2国将就如何处理这种情况（被中国经济霸凌）以及学到了什么，又是如何从中变得更强大等议题交换意见，并互相帮助。
 
-杜登认为，为了确保中共国不会重覆过去十年将南海军事化的做法，澳大利亚及盟国需要向中共国表明立场；他说，假如任由目前情况发展下去，澳洲及盟国将会“失去下一个十年”。
+据该报称，蓝斯柏吉斯强调，某些国家不应使用经济等胁迫方式，迫使另一个国家改变外交政策。但当前国际商定的规则和法规，正受到“强权国家”挑战，我们正在捍卫国家主权。
 
-“四方安全对话”（Quad）外长会议将于本周在墨尔本举行，杜登发言与此有关。悉尼晨驱报表示，预料“四方安全对话”外长会议将会讨论美、日、澳、印四国该如何加强防卫及经济发展合作，以便对抗中共国。
+对于外界盛传台湾驻立代表处可能因中共施压而更名一事，蓝斯柏吉斯再度驳斥，他重申，“无论如何，立陶宛都不打算更名。”“他们（指台湾）的正式名称不会改变。
 
-报导提到，专家认为，为了协助维护印太地区和平，澳洲未来国防预算势必要增加。澳洲去年国防预算为446亿澳元，占澳洲国内生产毛额（GDP）2.1%；对于澳洲军力是否足以协助维护印太地区和平，已引起防卫专家的担心。
-
-文字版原文：[澳防长预警：如不对抗中共 澳将失去未来十年](https://gnews.org/zh-hans/1968636/)
+文字版原文：[立陶宛外长今访澳 坚称不会更名台湾代表处](https://gnews.org/zh-hans/1968214/)
 
 *编辑：东京樱花团/asket
 发布：东京樱花团/平安卿卿*
