--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,33 +1,25 @@
 ---
-title: 大直播后记：疫苗灾难导致的世界大变局
+title: 樱花FM┃澳大利亚在经过近两年的边境关闭后 终于将对国际游客开放
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2018301/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2018351/)
 
-**整理：**奋斗、枫叶红了
-**编辑：**lili112333
-![](https://assets.gnews.org/wp-content/uploads/2022/01/12315456_4-2.png)
-再看全世界的疫苗，疫苗世界成了什么了？兄弟姐妹们，全人类就咱们爆料革命、新中国联邦（独好），咱是无苗有币族。我说过，疫苗灾难和疫苗次生灾难会超过一切。你看看澳大利亚、法国、加拿大，孩子、老人、妇孺全上街，这种人类上的辉煌的（运动），包括美国。
+音频：东京樱花团/战友520
+![](https://lh5.googleusercontent.com/iDRfKrcK_MoadkiYy9XWLDlkw7I2a3lJlr_q9hm1j1CFlj0__T0rVrmu7uwhD417PKNZ_d7NUsK0yz4dcQRp03_Ofkyy8GH3NUY7_yZKx_ef9gaTIKlzuVje1mnFtCzvhJge980-)
+澳大利亚的边境在经过近两年的关闭以阻止中共病毒（新冠病毒Covid-19）的传播后，终于将于2月21日对国际游客开放。但是，游客必须接受双重疫苗接种，否则就有可能像怀疑疫苗接种的网球明星诺瓦克·德约科维奇那样被拒之门外。他在上个月的澳大利亚网球公开赛之前被送回了家。
 
-现在你看辉瑞，七哥跟你说什么，做空辉瑞、Moderna，医药公司医药股降了多少？你见过有一个人，一个群体像我们那么牛叉吗？如果你们听七哥的，你们得赚多少钱呢？而且我告诉你——辉瑞、Moderna和Facebook都会破产，还有什么推（特），一定会破产。只要人类上有一个人在它都会破产，我告诉你，它是没有任何争议的。
+“条件是你必须接种两次疫苗才能来澳大利亚。这就是规则，每个人都应该遵守。”总理斯科特-莫里森说，“但如果你接种了双重疫苗，我们期待着欢迎你回到澳大利亚，我知道旅游业将期待着这一点。”
 
-就像我说，共产党一定会被消灭一样，没有任何存在的可能性。你想想共产党它怎么活呀？它怎么闭幕啊？冬眠会，它就是成啥了？你想想，现在卡车司机；你想想辉瑞、你想想Moderna、你想想这个国内的，卖6亿假疫苗——6亿假疫苗，赚了很多钱？但是这个钱赚得好。
+莫里森先生说，做出这个决定是因为澳大利亚现在已经被中共病毒的Omicron变体所蹂躏，这意味着国际旅行者不会构成额外的风险。
 
-还有一个，前天下午咱一位日本朋友跟我说，她说郭先生我没敢跟你说，日本人很老实，她说我先生和我作为政府官员都必须打，她说我们也没打疫苗。医生“嚓”就给喷到地上了。她说我们现在就是回家喝点小酒，就感谢Miles，感谢你。我们两个最不诚实的就是这次没打疫苗。那么同时她非常相信日本的那些卖疫苗的一定也会被追究（责任），走上绞刑架。
+“该变种已经在澳大利亚境内。对于那些即将到来的双重疫苗接种者，他们不会比那些已经在澳大利亚的人带来更大的风险。”
 
-法国，我们的战友，在医疗界的，他说：“郭先生，我可以看到马克龙走上绞刑架的感觉”。我可以预想到他被送上绞刑架。他说我们家都没打疫苗，也是政府官员，而且妻子家都是搞军火的。
+而对未接种疫苗的签证持有者需要获得旅行豁免才能入境，并在抵达后接受各州和地区的检疫要求。
 
-所以兄弟姐妹你看人类现在什么叫觉醒？这是多大的事！人类上一半的人被打了疫苗！他们可能处在一个生死不确定、得癌症随时死亡不确定的状态下，你觉得他（们）能放过这些媒体所谓的严肃媒体、黑暗的共产党势力，他能和共产党拉倒吗？
+文字版原文：[澳大利亚在经过近两年的边境关闭后 终于将对国际游客开放](https://gnews.org/zh-hans/1968521/)
 
-**资料来源：**2022年2月16日 文贵大直播
-
-*发布：翼族*
-
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
