--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 20220216美国大使不撤离中国的前提，必须病毒溯源
+title: 20220216七哥拿鲜血和命来签署的破产法案是为了换我们安全的一种方式
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2019577/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2019661/)
 
 作者:东京樱花团小视频组
 
