--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,21 +1,17 @@
 ---
-title: 有声&#124;警察和抗议者同样渴望人权,自由
+title: 有声&#124;班农先生呼吁追责中共并改变治世模式
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2022686/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2022711/)
 
 配音：香草山佛教部 – 李傻
 ![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-特鲁多宣布:国家紧急令之后。包括安大略省,魁北克省在内的省马上宣布:取消疫苗护照,逐步放开政策。但是这帮政客说:与自由卡车无关而是基于科学。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/687-0-1.jpg)
-死要面子的元耻政客不承认取消疫苗护照是因为卡车司机的和平抗争让他们害怕了。
+2月15日，据盖特消息显示，班农先生近日在接受采访时指出，郭文贵先生此前反复强调，当民意跌至谷底时，中共病毒疫苗强制令就会发生改变。如今，全球政客的民意调查都显示出灾难性的结果，于是，那些推行强制疫苗和疫苗护照的政客们纷纷转变了风向。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/4-38.jpg)
+班农先生也提到，正如郭先生示警的那样，中共病毒不仅是来自武汉病毒研究所的生化武器，其更是中共及其他黑暗势力借此以疫苗进行杀戮的工具。为此，美国必须小心谨慎地公布与之相关的证据和事实，从而对中共与所有涉及人员进行追责，进而揭露邪恶势力的这一布局。
 
-暴君特鲁多想用国家紧急令吓退卡车司机彻底失败。
+班农先生还指出，目前，所有的证据都掌握在正义力量的手中，所有的谎言和虚假陈述都将不攻自破。最终，全球追责的目标都将指向中共，而这些证据将为推翻中共提供基本的事实和依据。更重要的是，在追责的过程中，政府治理世界的方式也将随之改变。
 
-在反对疫苗暴政。争取人权,自由的问题上连恐怖分子都不配合特鲁多政府。和平抗议是合法的。特鲁多找不到镇压的理由。警察也是人也渴望人权。自由。以他们与抗议者在国歌中互相拥抱这是信仰的力量。特鲁多将作为暴君载人史册这是他的遗产。
-
-文贵先生早在香港反送中运动中就提倡香港抗我者使用卡车阻挡警察的阵压。这这倡议证明是非常有效的明智选择。
-
-文字版原文：[警察和抗议者同样渴望人权,自由](https://gnews.org/zh-hans/2021534/)
+文字版原文：[班农先生呼吁追责中共并改变治世模式](https://gnews.org/zh-hans/2020829/)
 
 音频处理：Tom Li
 发稿：Tom Li
