--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,24 +1,39 @@
 ---
-title: 最近香港疫情严重背后的原因是什么？
+title: 有声&#124;警察和抗议者同样渴望人权,自由
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2022673/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2022686/)
 
-撰稿：自由战士
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screenshot-2022-02-18-124439.png)
-图片来自网络
+配音：香草山佛教部 – 李傻
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+特鲁多宣布:国家紧急令之后。包括安大略省,魁北克省在内的省马上宣布:取消疫苗护照,逐步放开政策。但是这帮政客说:与自由卡车无关而是基于科学。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/687-0-1.jpg)
+死要面子的元耻政客不承认取消疫苗护照是因为卡车司机的和平抗争让他们害怕了。
 
-香港最近的新冠疫情严峻，已经连续多日确诊突破1000，2月16日公布4285例确诊病例，初步确诊已经达到7000例，超过1.2万患者滞留社区，已经公布死亡病例超过10名之多，目前香港的医疗体系基本瘫痪状态。随着病毒真相和疫苗真相的曝光，全球疫情在逐渐趋于平缓，香港却成为了重灾区呢？
+暴君特鲁多想用国家紧急令吓退卡车司机彻底失败。
 
-第一，目前看到香港的疫苗接种率达到了70%左右，比起接种率90%以上的地方，在防疫上肯定是有优势的，但是在香港被中共践踏后，全部实行了监狱管理模式，中共为了更好的管控香港人，再次以病毒为借口，把香港人彻底的关闭在家里，进行网格化管理。
+在反对疫苗暴政。争取人权,自由的问题上连恐怖分子都不配合特鲁多政府。和平抗议是合法的。特鲁多找不到镇压的理由。警察也是人也渴望人权。自由。以他们与抗议者在国歌中互相拥抱这是信仰的力量。特鲁多将作为暴君载人史册这是他的遗产。
 
-第二，现在在墙内的媒体上，大量的在宣传，香港人为了逃避疫情，出现了偷渡到深圳和珠海的案例，这是中共一贯实用的拉仇恨的模式，让内地人对香港人再次激起憎恨之意。而且在珠海居然出现了一则如果抓到偷渡的香港人，或者知道详情的举报有奖，举报每个人奖金10万元。这个综合的舆论引导让内地居民憎恨香港人的心里到达了极点。现在在墙内的朋友圈内，这些愚昧粉红们恨不得把香港人集体团灭掉。中共策划的互斗模式这么多年来一直这么用，屡试不爽。
+文贵先生早在香港反送中运动中就提倡香港抗我者使用卡车阻挡警察的阵压。这这倡议证明是非常有效的明智选择。
 
-第三，同时查看香港卫健委的网站，醒目的条目上写着，为了防疫能够尽快控制住，让百姓尽快去接种疫苗，还在继续鼓吹疫苗的有效性。
+文字版原文：[警察和抗议者同样渴望人权,自由](https://gnews.org/zh-hans/2021534/)
 
-综合来看，中共这次全方位的媒体舆论引导，加上政策强行落地，是要把香港彻底变成臭港的节奏，文贵先生很早就呼吁过香港的百姓能移民的尽快移民，否则后面中共拿到控制权后，会疯狂的让香港变成地狱，要比新疆更加惨烈，果不其然，这一天到来了，我们全球的战友们，努力传播真相，让香港尽快脱离中共的魔爪。
+音频处理：Tom Li
+发稿：Tom Li
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
+**更多资讯，更多关注**
 
-（文中观点只代表个人观点）
-![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
