--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,20 +1,27 @@
 ---
-title: 关注中国人权的NBA球星坎特透漏获得诺贝尔和平奖提名
+title: 岸田与普京就乌克兰局势举行电话会谈
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2022498/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2022503/)
 
-撰稿：追着曙光跑
+作者：东京樱花团｜文小白
+![](https://assets.gnews.org/wp-content/uploads/2022/02/pasted-image-0-1-3.png)[*图片来源*](https://fnn.ismcdn.jp/mwimgs/f/b/-/img_fbab4fdd9596c1e84fc7cc23b34bffc9529907.jpg)
+据NHK 2月17日消息，今晚9:30以后岸田首相就乌克兰持续的紧张局势与俄罗斯总统普京进行了20分钟的电话会谈。
 
-2月17日，NBA球星坎特发推表示，能获得诺贝尔和平奖提名，他既感到荣幸又受宠若惊；他说，有时候表明立场比领到下一份薪资更重要。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/WhatsApp-Image-2022-02-18-at-10.31.19.jpeg)图片来自坎特推特
-美媒指出，日前被NBA球队放弃的坎特，有30位诺贝尔奖得主联署力挺坎特，他也因此被提名诺贝尔和平奖。
+岸田首相表示他正密切注视着乌克兰局势，并敦促俄罗斯通过外交谈判寻求有关国家可以接受的解决方案，他说，以武力单方面改变现状是不可接受的。普京总统解释了乌克兰局势的历史和他本人对此事的看法。
 
-坎特是塞尔蒂克前中锋，他是直言批评中共政府是反人类罪的残暴组织，是为中国人权发声的少数国际顶级运动员之一。
+两位领导人同意继续就日俄关系进行对话，包括北方领土问题在内的和平条约的谈判以及乌克兰和其他地区的国际局势。
 
-此外，坎特曾在去年11月23日接受福克斯新闻采访时，敦促国际奥委会放弃2022年北京举行冬奥会。他说，即使大部分职业体育界都对中共侵犯人权、对中共领导层的指控保持沉默，但总得有人站出来与中共反抗。
+会后，岸田首相告诉记者：“我们将继续坚持不懈地进行外交努力，以减少紧张局势，我们将与七国集团和国际社会的其他成员合作，对实际情况作出适当的反应。”
 
-信息来源：[I’m honored and humbled to received the nomination for the Nobel Peace Prize.](https://twitter.com/enesfreedom/status/1493986402077401090?s=21)
+此外，岸田首相还与乌克兰总统泽伦斯基进行了电话交谈，双方同意共同努力，通过外交努力缓解紧张局势。
 
+岸田首相将参加下周在网上举行的七国集团领导人紧急会议，根据他与普京总统和泽伦斯基总统的电话交谈结果，他希望讨论七国集团国家如何能够共同努力，减少紧张局势。
+
+信息来源：[**岸田首相 日ロ首脳電話会談で外交交渉通じ解決方法追求求める**](https://www3.nhk.or.jp/news/html/20220217/k10013490001000.html)
+
+*校对：东京樱花团/東洋武士*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
