--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,93 +1,83 @@
 ---
-title: 西方警告称俄罗斯在乌克兰附近的军事集结正在增长而不是缩减
+title: 币圈新闻动态：喜币（HCN）价格目前在45.000 HDO
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2022817/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2022848/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-75.png)图片来自网络
-据《路透社》作者亚历山大·马罗（Alexander Marrow）和亚历山大·瓦索维奇（Aleksandar Vasovic）2022 年 2 月 17 日报道
-要点
+*喜马拉雅华盛顿DC 编辑：aQ*
 
-- 爱沙尼亚称俄罗斯“可能”发动“有限”攻击
-- 俄罗斯发布视频显示坦克离开克里米亚
-- 乌克兰政府称国防部所受的黑客攻击，是这类攻击中最严重的
-
-
-莫斯科/基辅，2 月 16 日（路透社）——西方国家周三警告说，俄罗斯在乌克兰边境的军事存在越来越多，因为爱沙尼亚表示战斗群正在抢占“关键地形”，这与莫斯科坚称的撤退矛盾。
-
-英国国防情报局局长在罕见的公开评论中说，已经发现了更多的装甲车、直升机及一座野战医院。
-
-美国总统乔·拜登（Joe Biden）政府的一名高级官员在没有提供证据的情况下表示，最近几天又有多达 7,000 名士兵部署到边境，其中一些于周三抵达。
-
-几十年来，世界大国陷入了东西方关系中最严重的危机之一，在冷战后的影响力和能源供应方面进行较量，因为俄罗斯希望阻止乌克兰加入北约军事联盟。
-
-西方国家建议采取军备控制和建立信任措施来化解僵局，因为袭击随时可能发生，促使他们敦促本国公民离开乌克兰。俄罗斯否认有任何入侵计划。
-
-美国国务卿安东尼·布林肯(Antony Blinken)在接受 MSNBC 采访时说：“俄罗斯是这样说的。然后俄罗斯就这样做的。而且我们还没有看到其军队有任何撤退。”
-
-“我们继续看到关键部队向边境移动，而不是离开。”
-
-爱沙尼亚外国情报局局长米克·马兰（Mikk Marran）说，爱沙尼亚情报部门知悉大约有 10 个战斗群正向乌克兰边境移动，据估计已经部署了大约 170,000 名士兵。
-
-他补充说，这次袭击将包括导弹轰炸和占领“关键地形”。
-
-他说：“如果俄罗斯在乌克兰取得成功，这将鼓励它在未来几年增加对波罗的海国家的压力，战争威胁已成为普京的主要政策工具。”
-
-俄罗斯国防部表示，在乌克兰附近的南部和西部军区完成演习后，其部队正在撤退，莫斯科驻爱尔兰大使坚称，俄罗斯西部的部队将在三到四周内回到正常驻地。
-
-它发布了视频，称其显示坦克、步兵战车和自行火炮部队离开克里米亚半岛，莫斯科于 2014 年从乌克兰手中夺取了克里米亚半岛。
-
-但北约军事指挥官们正在制定新作战部队的计划，外交官称这些作战部队可能部署在保加利亚、罗马尼亚、匈牙利和斯洛伐克。
-
-这类部队——旨在为更多士兵在需要时到达前线争取时间——已经部署在波兰和波罗的海国家。
-
-作为北约部署的一部分，英国将把其在爱沙尼亚的部队规模扩大一倍，并向与俄罗斯接壤的这个波罗的海小共和国派遣坦克和装甲战车。
-
-‘团结日’
-
-乌克兰还增加了与俄罗斯的盟友白俄罗斯接壤的前线边防警卫人数，据估计约有 9,000 名俄罗斯士兵参与了位于白俄罗斯的军事演习。
-
-正在全国各地穿梭，以帮助提振乌克兰士气的总统弗拉基米尔·泽连斯基（Volodymyr Zelenskiy）视察了他的武装部队进行的演习，其中包括标枪反坦克导弹。
-
-周三被指定为爱国假期，以回应俄罗斯可能在当天入侵的报道。他说，“没有人能像我们一样爱我们自己的家。只有我们一起，才能保护我们的家园”。
-
-人们举起旗帜，奏起国歌，以表示团结一致对抗入侵的恐惧。
-
-政府表示，袭击国防部的网络攻击是该国所见过的最严重的此类攻击，将矛头指向了否认的俄罗斯。
-
-白宫发言人珍·萨奇（Jen Psaki）说，美国官员目前还无法确定谁对此负责。
-
-“更多部队在路上”
-
-据一位西方高级情报官员称，俄罗斯侵略乌克兰的风险，在 2 月份剩余时间内仍然很高，俄罗斯仍可能 “在没有警告，或几乎没有警告的情况下” 攻击乌克兰。
-
-北约表示，它可以通过卫星图像证明俄罗斯没有撤回其士兵。秘书长延斯·斯托尔滕贝格（Jens Stoltenberg）说： “更多的军队正在赶来” 。
-
-在多次警告可能发动袭击后，莫斯科指责西方进行歇斯底里的战争宣传。
-
-俄罗斯将乌克兰加入北约视为对其安全的威胁，并表示如果受到制裁打击，它准备将能源出口转向其他市场。华盛顿及其盟国曾威胁说，如果俄罗斯入侵乌克兰的话将对其进行制裁。
-
-财政部长安东·西卢安诺夫（Anton Siluanov）表示，对俄罗斯银行的制裁将 “令人不快”，但其国家将确保所有银行存款和交易都得到保障。
-
-尽管口水战不断，外交努力仍在继续。
-
-白宫表示，拜登和德国总理奥拉夫·舒尔茨（Olaf Scholz）在周三的电话会议上强调了“继续跨大西洋协调的重要性”。
-
-乌克兰已要求联合国安理会周四讨论俄罗斯议会承认自称分裂分子的提议。
-
-英国外交大臣利兹·特拉斯(Liz Truss)本周将访问基辅，布林肯将前往德国参加周五开始的慕尼黑安全会议，与盟国进行协调。
-
-萨奇说，“外交大门仍然敞开”。
+![](http://himalayawashingtondc.org/wp-content/uploads/2021/07/ScreenShot-2021-07-31-at-16.20.22@2x.png)
 
 
 
-原文链接：[https://www.reuters.com/world/europe/russian-pullout-meets-uk-scepticism-ukraine-defence-website-still-hacked-2022-02-16/](https://www.reuters.com/world/europe/russian-pullout-meets-uk-scepticism-ukraine-defence-website-still-hacked-2022-02-16/)
+## 每日一问
 
 
 
 
 
-翻译：JS709｜校对：Nick｜编辑&发布：闪电训练
+各公司又开始大规模地抢滩币圈各环节，谁会最后赢家?
 
+
+
+
+
+## 喜马拉雅交易所要闻
+
+
+
+
+
+- 喜交所网站行情显示，喜币（HCN）价格目前在45.000 HDO，24H最高价格为45.561 HDO，24H最低价格为43.212 HDO，24H成交量约为56705.979 HCN。
+
+
+
+
+
+
+## 新闻动态
+
+
+
+
+
+1. 官方消息，隐私应用Shade Protocol完成500万美元私募融资。据悉，Shade Protocol是基于隐私公链Secret Network构建的隐私保护dApp，目前主要产品是种基于隐私的算法稳定币Silk。
+2. 2月17日消息，去中心化交易平台Dexalot完成700万美元融资，Blizzard Fund领投。Dexalot位于Avalanche网络上，这是一种与智能合约开发兼容的EVM协议，它为Dexalot等dApp带来可扩展性，同时承诺安全性、有竞争力的费用和快速的交易速度。
+3. TechCrunch报道，加密初创公司Multis宣布完成700万美元融资，Sequoia Capital领投。据悉，Multis计划提供帮助Web3组织管理其加密财务的软件层。
+4. TechinAsia报道，风投机构True Global Ventures通过其专注于区块链的基金向医疗保健区块链公司Chronicled投资了830万美元。Chronicled表示，其B轮融资计划于2022年晚些时候完成。据悉，Chronicled自2019年初A轮融资以来共筹集了近1600万美元。
+5. TheBlock报道，总部位于柏林风投机构Cherry Ventures推出第一只3400万美元的加密基金，将主要通过代币进行股权投资，目前已经投资Lido、Morpho、BlackPool等。当被问及该基金是否会将资金投入NFT时，Cherry加密团队成员Patrick Mayr表示正在研究该行业并拥有投资所需的基础设施。
+6. CryptoDaily报道，元宇宙游戏Bullieverse宣布完成400万美元融资，Spark Digital Capital、LD Capital等参投。
+7. TheBlock报道，红杉资本（Sequoia Capital）将推出一个新的以加密货币为重点的基金Sequoia Crypto Fund，基金规模为5至6亿美元，主要投资于“流动性代币”（已上线或将要上线交易所）。该基金是规模更大的红杉资本基金（Sequoia Capital Fund）的一部分。除了加密货币子基金，红杉资本还将继续通过其主要的种子基金、风险基金、成长基金和扩张基金投资加密货币初创公司，这些基金的总资本承诺超过75亿美元。
+8. Blockworks报道，多家加密风投机构为Web3和区块链数据索引层The Graph推出规模为2.05亿美元的生态系统基金，参与机构包括Digital Currency Group、Multicoin Capital、Reciprocal Ventures、gumi Cryptos Capital、NGC Ventures和HashKey。该基金将用于加速The Graph生态系统中关键项目的增长和发展。
+9. Cryptopotato报道，Graph Blockchain的子公司New World与巴西足球偶像Ronaldinho合作，这位前巴塞罗那足球俱乐部球员将成为区块链项目的官方全球大使，他将为数百万粉丝创造独家活动和NFT体验。Ronaldinho说，“NFT市场的全球增长确实令人惊叹，这个平台让粉丝能够以前所未有的方式与他们最喜欢的运动员、艺术家和名人互动。”
+10. Cointelegraph报道，非盈利管理机构The Interchain Foundation宣布发布Interchain Accounts。区块链间通信协议(IBC)使整个区块链能够控制单独链上的帐户。迄今为止，有38个项目使用IBC，包括Terra Luna、Crypto.org和Gravity Bridge，在过去38天内完成了840万笔交易。使用Interchain Accounts，一个区块链可以访问另一个区块链的应用程序功能，例如质押、投票、交换代币等。跨链互操作性和流动性转移协议deBridge宣布启动其主网。通过deBridge，用户将能够在以以太坊(ETH)、BNB链(BNB)、火币生态链、Arbitrum和Polygon(MATIC)等区块链网络之间转移资产和数据。
+11. BusinessWire报道，另类投资平台Yieldstreet宣布，通过与Pantera Capital合作，推出其首个加密基金Pantera Early Stage Token FundI，以获得以加密为重点的投资。
+12. ChannelNewsAsia报道，环球音乐集团（Universal Music Group）已与NFT平台Curio建立合作伙伴关系，为其唱片公司和艺术家开发NFT系列。环球音乐表示，计划与Curio合作为公司及其艺术家开发数字艺术品和其他收藏品。Curio还将作为一个在线商店，允许用户购买官方授权的NFT，将在3月份与Capitol Music Group和英国创作歌手Calum Scott合作推出首个NFT系列。
+13. 2月17日报道，电竞平台Nerd Street Gamers今日宣布和FTX.US建立长期合作伙伴关系。FTX.US将赞助举办Nerd Street锦标赛，以及Nerd Street全美9个实体电竞场馆的每周小区比赛和活动。此外，FTX.US还会帮助Nerd Street Gamers平台建立加密支付功能和区块链相关应用。
+14. PRNewsWire报道，DeFi Technologies与RockX建立战略合作伙伴关系，通过金融产品提供质押收益。
+15. 2月17日消息，USDC发行方Circle宣布联合Block、Coinbase和Centre等公司推出去中心化身份标准Verite，使任何组织能够发布和验证参与加密经济的用户和机构的数字身份凭证。与中心化批准机制的数字身份标准不同，Verite是去中心化的、开源的，并且任何人都可以免费构建。
+16. 2月17日消息，跨链互操作性和流动性转移协议deBridge宣布启动公共主网，该协议的无许可、去中心化设计将允许用户和协议在所有区块链网络之间传输资产和数据，目前支持以太坊、币安智能链、火币生态链、Arbitrum和Polygon。
+17. 官方消息，去中心化非托管流动性市场协议xBank宣布，将于2022年3月在以太坊扩容方案StarkNet上推出。据悉，xBank为出借方管理存款，并为借款人的存款资产贷款提供便利，同时进行适当的风险管理，以保护出借方免受流动性不足和破产的风险。
+18. Coindesk报道，美国银行在与Chainlink联合创始人Sergey Nazarov举行投资者电话会议后的一份研究报告中表示，Chainlink可以加速下一代区块链在金融、保险、供应链、游戏和博彩领域的应用。目前去中心化预言机网络（DON）已在整个区块链领域被大量采用。以Alkesh Shah为首的分析师周三在报告中写道，Chainlink可能是去中心化金融（DeFi）总价值锁定（TVL）截至2月15日增长至2030亿美元的背后驱动力，同比增长313%。 
+19. Coindesk报道，西班牙加密货币交易所Bit2Me周四宣布，该交易所已获得西班牙中央银行的批准，成为“第一家将虚拟货币兑换成法定货币和托管数字钱包的服务提供商”。Bit2Me现在将能够为西班牙银行提供白标服务，允许在其平台上进行加密交易，并补充说它目前正在与“几家银行”进行谈判。该公司在声明中表示，Bit2Me在100多个国家/地区提供加密服务，2021年的交易额达到11亿欧元（12.5亿美元）。
+20. Blockworks报道，NFT市场Nifty Gateway联合创始人Duncan Cock Foster表示，Nifty Gateway正在为机构和大型收藏家推出NFT咨询计划，该计划将帮助客户入门NFT、私人销售、场外收购、挖掘市场情报，以及进行全球支持，目前为止该服务是免费的。Nifty Gateway由双胞胎兄弟Duncan和Griffin Cock Foster共同创立，于2019年11月被加密货币交易所Gemini收购。Duncan Cock Foster说：“随着机构参与者和高净值个人对NFT市场产生兴趣，他们将需要能够为他们提供优质建议的平台”。
+21. 2月18日消息，在Daily Journal协助举办的在线年度股东大会上，伯克希尔•哈撒韦公司副董事长查理•芒格表示，他希望其他国家效仿中国，立即禁止比特币和加密货币，他说：“我希望它立即被禁止，我很佩服中国人禁止它”。现年98岁的查理•芒格强调说，加密货币类似于“某种性病”，他为这些年来避开他们感到“自豪”。去年二月，芒格曾将比特币比作“虱子”，暗示加密货币只对敲诈勒索、绑架和逃税有用。比推此前报道，伯克希尔•哈撒韦公司已向巴西数字银行Nubank投资了10亿美元，该银行的投资部门允许用户将资金投入与加密货币相关的交易所交易基金(ETF)。
+22. 官方消息，DeFi借贷协议Euler Finance发布Uniswap预言机攻击模拟器，最初是作为一种内部工具，使Euler开发团队能够监控与Euler上的借贷池相关的风险。Euler Finance决定将其向公众开放，希望模拟器能够证明有助于保护Uniswap预言机。
+23. 2月17日消息，来自摩根大通公司、东芝公司和Ciena公司的一组量子计算工程师发布论文表示，他们已经证明，新开发的量子密钥分发（QKD）网络，可用于保护区块链上的通信。量子密钥分发是一种由量子物理学驱动的超安全双向通信网络，作为保护区块链免受量子计算攻击的一种方式。
+24. TheBlock报道，新加坡金融管理局（MAS）高级部长兼主管部长Tharman Shanmugaratnam表示，没有计划监管NFT，监管机构对NFT采取“技术中立”的立场，MAS在NFT上的立场可能会改变，碎片NFT等概念可能需要MAS的监管。如果NFT的结构代表对上市股票组合的权利，它将像其他集体投资计划一样受到招股说明书要求、许可和商业行为要求的约束。
+25. Coindesk报道，美伊利诺伊州立法者希望税收激励计划扩展到加密矿企，伊利诺伊州参议院第3643号法案于1月中旬由共和党参议员Sue Rezin首次提交，本周获得了民主党参议员Julie Morrison的共同提案。该法案中引用的税收优惠计划自2019年以来一直在实行，潜在申请方必须投资至少2.5亿美元，创造至少20个工作岗位，并已获得碳中和状态或绿色建筑认证等要求。如果第3643号法案获得最终批准，税收激励计划将允许被符合条件的加密矿企采用。
+26. Cointelegraph报道，美国副总检察长Lisa Monaco在当地时间周四宣布，联邦调查局（FBI）正在创建一个“致力于加密货币的专业团队”，称为虚拟资产犯罪调查部。该部门将包括加密专家，并最终可能建立用于追踪和扣押非法资金的区块链分析手段。Monaco表示，司法部将启动一项国际虚拟货币倡议，允许“更多联合国际执法行动”通过区块链追踪资金，并鼓励对数字资产进行监管。
+27. 2月18日消息，美联储梅斯特称，央行数字货币可能会影响对美联储货币储备的需求，这取决于它的具体设计方案。央行数字货币更为突出的应用场景之一是跨境支付。
+28. 财联社报道，美国司法部副部长表示，联邦调查局将启动新的虚拟资产开发部门，新部门将专注于区块链分析、虚拟资产扣押。
+
+
+
+
+
+*编辑：aQ
+发布：文顾*
+
+
+ 
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
