--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,29 +1,27 @@
 ---
-title: 从美元和欧元看到中共的狂妄
+title: 喜币的四个核心价值
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2022850/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2022890/)
 
-美元和欧元之间的关系，就是男女之间的关系。你未来会看到这场战争发生以后，绝对是中国的习太阳对政治的无知对国际政治的无知和狂妄。
+喜币不能超发，可以兑现，没有第三方，无成本。
 
-**【郭先生直播摘要】 2022.2.13 从美元和欧元看到中共的狂****妄**
+**【郭先生直播摘要】 2022.2.13 喜币的四个核心价值 **** **
 
-**郭先生****: **
+**郭先生：**
 
-欧元暴涨美元大跌，很多人以为这是美元和欧元的战争。大家一定记住，这是王八蛋的逻辑。
+战友们你们要懂得喜币喜联储它有多伟大，喜币最牛的四点它完全搞了。 你存在银行的钱和过去的纸币。第一它增发。丹尼给了我100块钱, 我给你印出了一千块钱, 你就被兑水了. 第二个最可怕的问题，我们大家都忽视掉的问题, 它是不可兑现，就是我可以不还给你, 我有不兑现的权力, 这是更可怕。 喜币绝不可能，因为一美元就是一美元，一币就是一币，就是市场交易。第三件事，它是一个中介，第三方经营化，它不是点到点。
 
-美元和欧元之间的关系是啥你知道吗？战友们我可以告诉大家，就是男女之间的关系，谁没了谁都不行。美国需要欧元但不许你比我强大。
+我们的喜币喜美元是A到B，喜联储不能控制，没有任何权力。第三个，它不是中介方，第四个，最核心的是什么？它没成本。你去想想，Hpay没有成本，没有成本的没有第三方的，绝对必须保证原值的。第四不可增发的，银行哪有这个条件？哪家银行不增发？哪家银行不印刷？而且关键最核心的这四样的基础是什么？
 
-这就像小飞象和小飞侠，两个人默默之间到底在家里谁是老大，我离不了你，你也离不了我。但是你要把我压迫了大了，我就找别人去。但是你不能压迫得我不能活，就是美元不能没有欧元，欧元不能没有美元。美元假如没有了欧元，人民币就做大，瑞元就做大。不存在所谓美元要干掉欧元，不存在欧元干掉美元。只有美元会自杀或者欧元会自杀，不存在这个。
+它的价值，大家要记住，喜币一年就十个亿。多一个就是犯罪，所有美国人所有全世界币，政府一句话就可以印刷。叫超发，那十亿个币是你知道的，关键是美国也好，我有一万个亿我不增发。他没告诉你我有一万个亿，喜币白皮书是先订下数量，没有一个国家银行告诉你我的币有多少个。没有一个，只有喜币，BTC牛就牛在固定数量，只有2600万。
 
-弱美元对美国经济是最好的，而且欧元强美元欧元也不愿意干。因为欧元不想跟俄罗斯这么弄，欧洲最核心的利益就是跟俄罗斯不打。但是俄罗斯说，孙子你想弄死我我还跟你不打仗，我非打你不行。对美国而言，你俄国你打吧，你打了对我是好事，欧洲弱我最强，美国的海外最大利益还是欧洲。美元和欧元之间不会导致战争，它只是利益考量的一部分。而且美国内部政治的选举即将到来，很多人说这是美国最大受益者，美国和俄罗斯的游戏绝对错了，这是一场世界上，你未来会看到这场战争发生以后，绝对是中国的习太阳对政治的无知对国际政治的无知，和自我的狂妄，和中国的互相欺骗。
-
-就像告诉习太阳普京说这是绝妙的机会。 这种欺骗一样， 是一种国际政治欺骗，和十四亿中国人认为美帝国主义一直在死亡中在堕落中， 中国要领导全世界这么无知一样，是愚蠢无知欺骗， 对国际规则完全被欺骗的老百姓， 造出一个集体自杀决定的结果。 就是中国共产党疯了， 而且这个疯狂被俄罗斯彻底利用， 赢家一定是俄罗斯， 赢家一定是美国， 灭的是中国而且欧洲因此会重生。
+我就这麽多，但是是不是这么多另说，就这一样它就赢了，才有今天的比特币，这是核心。当发现喜币有任何一个增发的时候，你们记住，你们一定告死它，那么它会把命赔上，终身都蹲在监狱里。这不可能的。
 
 
 
 
 
-视频剪辑：CG. |听写：雨山溪桥客. 翻译：Arthur | tonyj | 视频制作+字幕：刀锋舞者 |编辑&发布:闪电训练
+视频剪辑：GC| 听写：雨山溪桥客|翻译：Arthur |校对: tonyj | 视频制作+字幕：刀锋舞者 | 编辑&发布：闪电训练
 
  
 
