--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,36 +1,26 @@
 ---
-title: 测试结果显示疫苗对卵巢和睾丸产生损害
+title: 乌政府指控亲俄分子炮轰幼儿园 致两教师受伤
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2022792/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/2022812/)
 
-**简评：**
+**撰稿：日本东京方舟农场 Kevin wang**
 
-辉瑞制药违反常规，对雇员隐瞒疫苗成份。过去15年来，辉瑞一直在研究刺突蛋白和脂质纳米颗粒的炎症性损害。公开的研究显示，所有测试的疫苗种类都对卵巢和睾丸产生损害。不同批次的产品没有正确标签，只是用A-B-C-D来标注，还需要进一步调查真相。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/02-2.png)
-[**GETTR视频链接**](https://gettr.com/post/psu17d7e3a)
+2月17 日，乌克兰政府指控俄罗斯支持的乌东分离主义分子炮击卢甘斯克地区，有炮弹击中了一所幼儿园，并造成2名老师脑震荡。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-189.png)（图片来自中央社）
+据《中央社》报道，当地市政人员和非政府组织Proliska的信息：攻击在当地上午9时发生，俄罗斯支持的乌东分离主义组织的部队炮击击中一所位于斯塔尼齐亚卢甘斯卡（Stanytsia Luhanska）幼儿园的音乐教室，学童当时在场但皆未受伤，有2名老师脑震荡。
 
-[**GTV视频链接**](https://gtv.org/video/id=61ffd768585ecc15d73e1aeb)
+另有一名在卢甘斯克地区卡季伊夫卡镇的路透摄影记者表示有听见来自停火线方向的炮击声。
 
-**视频字幕：**
+报道称，基辅及其西方盟友认为莫斯科可能会利用乌东地区冲突事件作为入侵的理由。俄方则指控基辅试图让事态升级，以武力夺回分离主义者占据的领土。
 
-**主持人**：维特医生，这有来自艾普尔.摩丝关于辉瑞制药的爆料，难以置信的是他们竟然连雇员都保密疫苗的成份，而不是像他们常规做法，标注成份。他们用A-B-C-D包来标注，这违反了他们以前的任何规则。基于你的经验，维特医生，他们为什么这么做？
+截至目前，此次炮击事件并未导致俄乌双方有任何升级的举措。
 
-**维特医生**：我认为辉瑞对这些成份的掩盖，比你们认知的更加震惊。他们在过去15年来，一直在研究刺突蛋白和脂质纳米颗粒的炎症性损害，并且继续开展这项工作。我们公开的一些研究显示，所有测试的疫苗种类都对卵巢和睾丸产生损害。这正是目前正在发生的部分情况。事实上，不同批次的产品没有正确标签。不同批次的不良事件存在差异，这一事实也需要进一步调查。我很感谢艾普尔和你还有约翰，正在推进这项工作。
+参考链接：
+[https://www.cna.com.tw/news/aopl/202202170317.aspx](https://www.cna.com.tw/news/aopl/202202170317.aspx)
 
-*字幕：free20200604 | 听写：云岭 | 翻译：Blue |PR：Roberts｜简评/文字整理/编辑：胖丁 | Page：我是球大哥*
-
-* * *
-
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
-
-
-编辑：【英国伦敦喜庄园编辑部】
-
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
-
-
+素材采编：Kevin wang
+编辑：青城道姑
+发布：爱放飞
 
  
 
