--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,23 +1,28 @@
 ---
-title: 疫情+人祸=香港医疗系统崩溃！
+title: 台湾行政院推动修法防范北京偷盗核心技术
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2022762/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2022793/)
 
-撰稿：云飞天
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Unknown-18.jpg)台湾行政院推动修法防范北京偷盗核心技术 网络图片
+据美国之音2月17日报道，为了防止核心技术外流，或中共国大陆通过经济间谍窃取情报，或核心技术人才遭北京利诱，台湾行政院17日通过国家安全法和条例修正草案，增订国家核心关键技术经济间谍罪，对包括半导体在内的台湾核心技术提供更多的保护。同时提高相关惩罚，对窃取或泄露核心技术者最高处12年有期徒刑，并处新台币1亿元以下罚金。此外，核心关键技术者如果需要前往中共国大陆，必须经过审查并获得许可才能成行。
 
-连日破纪录，香港染疫人数日增衝破六千宗，各大医院每日有大批病人在露天通宵等候入院，医护如在地狱工作，每名医护人员要照顾至少50名患者。
+台湾虽然总体经济实力不如中共国大陆，但在特定的高科技领域却在全球独领风骚。台湾生产全世界最为先进的半导体芯片，不仅配备在顶尖的战机和其他武器装备上，而且也用于诸如手机这样的民用消费品中。与欧美一些国家一样，台湾也长期担心中共国大陆以经济间谍或其他手段窃取台湾的核心技术，复制台湾的成功前例，或削弱台湾的技术优势。
 
-部分医院在户外放置约50张病床，面对近日天气转冷，医院又要腾空更多空间，将户外较体弱病人收入室内，避免将病人留在户外吹冷风。另有消息称，各公院正在室内找地方安置病人，甚至考虑外科病房、院内行人天桥等。
+高科技产业是台湾的经济命脉，近在咫尺的中共间谍以各种手段吸引台湾高科技人才，并且渗透到台湾的各行各业窃取关键的核心技术。台湾行政院通过的修法草案需要经过立法院的审理和通过，才能成为正式的法律。但是中共国间谍已经成为台湾，甚至全世界每一个发达国家的威胁，全世界都在防范和围堵盗窃手段高超的中共间谍。
 
-护士：急症如“战地” 一人照顾50人
-医院急症室护士表示，护士每次当值只可去一次厕所，不少人上班前吃一餐，捱到下班；由于人手不足，难以看顾部分有跌倒风险的长者，近日有多人跌至头破血流，需要用约束衣限制其行动。护士表示，最崩溃是见到老弱病人要在户外冒寒，于心不忍，她想问特区政府高官，是否亲自来体验在寒风冷雨中吹风两日？有护士质疑中共及香港即使推行全民检测，找出更多患者，但香港医疗系统根本无法应付。
+新闻参考链接：[https://www.voachinese.com/a/taiwan-with-eye-on-china-to-boost-protection-for-its-semiconductor-secrets-20220217/6445871.html](https://www.voachinese.com/a/taiwan-with-eye-on-china-to-boost-protection-for-its-semiconductor-secrets-20220217/6445871.html)
 
-有急症室医生表示，每间公立医院都情况恶劣，尤其黄昏及晚上当值医护较少，目前病房已经爆满，如果附近再有老人院大爆发，后果不堪设想。
+* * *
 
-前线医护表示，夜更人手比例十分悬殊，有医院两名护士，需要照顾120名病人，医护面对相当大压力，入行这麽多年，从未见过这情况，很多护理程序不能提供，大家觉得好痛心和痛苦。
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
-发稿：MG5
-![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
+
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+
 
 
  
