--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,15 +1,37 @@
 ---
-title: 樱花头条｜《黄石公园》演员福里-J-史密斯因疫苗而抵制SAG颁奖典礼
+title: 测试结果显示疫苗对卵巢和睾丸产生损害
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2022758/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2022792/)
 
-撰稿：东京樱花团/樱花传媒
+**简评：**
 
-[信息来源](https://gettr.com/post/pv7hbk291b)
+辉瑞制药违反常规，对雇员隐瞒疫苗成份。过去15年来，辉瑞一直在研究刺突蛋白和脂质纳米颗粒的炎症性损害。公开的研究显示，所有测试的疫苗种类都对卵巢和睾丸产生损害。不同批次的产品没有正确标签，只是用A-B-C-D来标注，还需要进一步调查真相。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/02-2.png)
+[**GETTR视频链接**](https://gettr.com/post/psu17d7e3a)
 
-*编辑：东京樱花团/唯真不破小蜜蜂*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+[**GTV视频链接**](https://gtv.org/video/id=61ffd768585ecc15d73e1aeb)
+
+**视频字幕：**
+
+**主持人**：维特医生，这有来自艾普尔.摩丝关于辉瑞制药的爆料，难以置信的是他们竟然连雇员都保密疫苗的成份，而不是像他们常规做法，标注成份。他们用A-B-C-D包来标注，这违反了他们以前的任何规则。基于你的经验，维特医生，他们为什么这么做？
+
+**维特医生**：我认为辉瑞对这些成份的掩盖，比你们认知的更加震惊。他们在过去15年来，一直在研究刺突蛋白和脂质纳米颗粒的炎症性损害，并且继续开展这项工作。我们公开的一些研究显示，所有测试的疫苗种类都对卵巢和睾丸产生损害。这正是目前正在发生的部分情况。事实上，不同批次的产品没有正确标签。不同批次的不良事件存在差异，这一事实也需要进一步调查。我很感谢艾普尔和你还有约翰，正在推进这项工作。
+
+*字幕：free20200604 | 听写：云岭 | 翻译：Blue |PR：Roberts｜简评/文字整理/编辑：胖丁 | Page：我是球大哥*
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+
+
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
