--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,29 +1,44 @@
 ---
-title: 法国病毒学家、诺贝尔奖获得者卢克·蒙塔尼耶教授逝世前三周在意大利发表演讲
+title: 拉脱维亚运动员嘲笑北京冬奥会为“政治剧场”
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2022757/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2022764/)
 
-卢克·蒙塔尼耶教授指出，新冠疫苗是基因传播的产物。它不能防止传染，而是毒药。应停止接种疫苗。并提出一些药物可以有效地治愈新冠。
+![An armed policeman marches through a 17-meter-high flower bed with the theme of &quot;Wonderful Winter Olympics&quot; at Tiananmen Square on Jan. 15, 2022 in Beijing, China. (Lintao Zhang/Getty Images)](https://img.theepochtimes.com/assets/uploads/2022/02/16/TC-Olypmic-700x420.jpg)2022年1月15日，中国北京，一名武警在天安门广场以“精彩冬奥”为主题的17米高花坛中行进。 （盖蒂图片社）
+来源于《大纪元时报》网站2022年02月16日的报道，两届奥运会铜牌得主、拉脱维亚男子雪橇队现任教练马丁斯·鲁贝尼斯(Martins Rubenis)在2月7日(周日)的冬奥会比赛结束数小时后接受拉脱维亚媒体采访时，借机表达了他对主办2022年奥运会的中共政权的蔑视。
+在接受拉脱维亚的国家公共广播公司拉脱维亚广播电台和拉脱维亚电视台的采访时，鲁贝尼斯称北京冬奥会为“政治剧场”。
+“这是一个巨大的‘奇观’，对我来说，作为一名奥运选手，我看着这一切感到心痛。”鲁贝尼斯告诉拉脱维亚媒体。
+他说，他的团队晚上打开电视，却只看到“一个频道上播放着挂有毛泽东照片的天安门广场和在角落上的奥运五环”。当他们第一次到达并下飞机时，他们遇到了“穿着白色防护服的人”，他们可能被告知国际运动员“正带来另一场瘟疫”。
+“这感觉就像我们被当作瘟疫对待，他们不得不与我们保持距离。”他说，“很明显，当我们经过时，中共的鲜花和旗帜正在飘扬，我们看到了一个巨大的政治剧场，主题是‘你看这里的一切有多好’。”
+2014年冬奥会后，鲁贝尼斯以运动员身份退役，担任团队教练的角色，并成为拉脱维亚奥委会的一名成员。但他说，对于2022年北京奥运会，他对是否要参加感到很纠结。
+“对于这些奥运会，我是带着很强的双重感受来的。直到最后一刻，我都不知道我是否能够来到这里。”鲁贝尼斯告诉媒体。
+作为一名对中国人权直言不讳和积极的倡导者，鲁贝尼斯曾在2008年北京奥运会前担任全球人权火炬传递的官方大使。该接力是一项全球性的努力，旨在提高人们对在中共国受到中国共产党迫害的群体的困境的认识，并呼吁将2008年奥运会从中共国转移或抵制。从那时起，他持续发声，当中共国获得第二届奥运会主办权时，他感到震惊，尽管它的人权记录很严重。
 
-因为这些疫苗是合成的。根据错误的策略。一个严重的错误。这个策略是一个巨大的错误。这个策略只不过是推广这个产品。它是一种疫苗一种基因传递的产品。因此自然和所有的实验都表明这些疫苗并不能预防传染病。与他们一开始宣布的相反。
+“知道我对中共国人权问题的态度，作为一名奥运选手，听到国际奥委会决定在这里举办第二届奥运会的消息，对我来说是绝对不可接受的。”他说，“并且如果我是一名运动员，我可能不会来这里。我来这里是为了帮助团队。”
+鲁贝尼斯告诉拉脱维亚媒体，在世界其他地方参加奥运会将会是另一种完全不同的感觉。
+“很多运动员在这里谈论它，很多教练也谈论它。”他说，“生活在西方世界的人不明白人们怎么能像木偶一样做那样的事情。好吧，全世界都有机会看到它，看到事物的本来面目，这是件好事。”
+鲁贝尼斯说，他理解大多数中国人从小就在中共的庇护下长大，他非常同情他们，“因为从他们的童年开始，从四岁开始，当他们被放进幼儿园时，他们就被严重洗脑。”他解释道，“这种洗脑在每一步都能看到和感受到，这就是为什么他们害怕所有他们没有征得许可的事情。”
+鲁贝尼斯强调，世界上目前正在发生的事情正在呼唤每一位珍视自由和人权的人。
+“我相信这些奥运会，以及在新冠病毒盛行期间世界上所有的这种情形，会让我们看到这样一个事实，即我们不能出卖自己的灵魂。”
+简评：
+拉脱维亚是波罗的海三国之一，从前苏联脱离出来后成为一个独立的民主国家，他们的国民曾经尝过前苏联共产主义的味道，所以能够深刻理解并同情在中共统治下的像木偶一样生活中国老百姓，同时能够认清中共用金钱对整个世界的侵蚀。
+此篇报道也仅仅是文贵先生倡导的的中共冬奥会办成“冬眠会”的一朵小浪花，在没有人权，实施种族灭绝的中共统治下的中共国，人们不仅会追问：冬奥会是什么？奥林匹克精神应该是公平、公正、平等、自由吧？这些精神在中共国存在么？在生命安全都得不到保障的中共病毒大流行背景下，在释放了中共病毒的中共独裁者们的老巢举办这样的奥运会，难道不是一种巨大的讽刺么？国际社会已经觉醒，中共国的基层老百姓也是时候觉醒了。
 
-这是科学界公认的，如今不仅仅是因为临床证据，更是因为所有的结果。这种疫苗引起的所有疾病。不幸的是，它们有更严重的影响。由信使RNA合成的刺突蛋白包含在疫苗中，对细胞有毒。它是有毒的。
+新闻链接：[https://www.theepochtimes.com/olympic-games-in-china-a-huge-political-theater-my-heart-aches-watching-this-latvian-team-coach\_4278647.html](https://www.theepochtimes.com/olympic-games-in-china-a-huge-political-theater-my-heart-aches-watching-this-latvian-team-coach_4278647.html)
 
-例如，这种蛋白质会影响心脏等器官。一些年轻运动员死于接种疫苗。这是不能容忍的。疫苗不是为了杀戮而是为了保护。所以给儿童接种这种疫苗是犯罪行为。
+翻译/简评：Brianchow
 
-还有比这更严重的影响。这些疫苗很可能导致神经系统疾病。非常严重的脑部疾病。已经有数十人死亡。由于疫苗接种的这些长期影响有时神经系统症状已经表现出来了。在第二次加强接种新冠疫苗后，没有人能预测有多少接种了新冠疫苗的人是否会患上这些神经系统综合症。
+PR：Harvey（叶知秋）
 
-因此，我要求我所有的同事停止给人们接种这种疫苗。不断为人们接种疫苗的医生绝对清楚这一点。如果他们以前不清楚，现在清楚。
+* * *
 
-当心，当心！
-
-他们应对人类的未来负责。他们忘记了治疗方法。他们不应该只关注预防。所以不仅有疫苗，还有效果很好的药物。没被用来治疗的药是抗生素。
-
-
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
 
+编辑：【英国伦敦喜庄园编辑部】
 
-视频听写/翻译：三分 | 校对：烟波浩渺 | 视频剪辑/制作/字幕：三分 | 编辑：FiLa文新心 | 发布：闪电训练
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
