--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,30 +1,15 @@
 ---
-title: 香港疫情失控，确诊病例爆炸性增长
+title: 樱花头条｜《黄石公园》演员福里-J-史密斯因疫苗而抵制SAG颁奖典礼
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2022730/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2022758/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Unknown-17.jpg)香港疫情失控，确诊病例爆炸性增长 网络图片
-据美国之音2月17日报道，香港17日新增Covid-19确诊病例6116例，再次大幅度超过前一天的4285例，新增死亡病例24人。香港今年1月以来累计确诊病例1.66万例，超过2020年和2021年两年病例的总和。
+撰稿：东京樱花团/樱花传媒
 
-病人数量大大超出医院的接纳能力，导致公立医院不堪重负。隔离设施已经达到满负荷，病床占用率已经超过90%。此外，香港的监狱也发现了疫情。
+[信息来源](https://gettr.com/post/pv7hbk291b)
 
-香港的学校、健身房、影院等公共场所已经关闭，许多政府和企业员工都在家上班。这样，就能缓解疫情吗？绝不可能。因为病毒的根源就是中共。不铲除中共，病毒会永远盘旋在香港，建再多的隔离设施，建再多的病房都不够用，只有消灭中共这个制造并释放病毒的源头，香港才可能停止病毒的扩散。
-
-新闻参考链接：[https://www.voachinese.com/a/hong-kong-s-covid-fight-intensifies-as-cases-multiply-by-60-times-20200217/6445883.html](https://www.voachinese.com/a/hong-kong-s-covid-fight-intensifies-as-cases-multiply-by-60-times-20200217/6445883.html)
-
-* * *
-
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
-
-
-编辑：【英国伦敦喜庄园编辑部】
-
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
-
-
-
+*编辑：东京樱花团/唯真不破小蜜蜂*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
