--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,40 +1,38 @@
 ---
-title: 儿童不需要接种新冠疫苗
+title: 有声&#124;美通过《2022年美国竞争法》，防止中共企业垄断
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2022722/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2022734/)
 
-**简评：**
+配音：香草山佛教部 – 李傻
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
 
-主张为儿童接种疫苗的人给出了两个原因：一个是儿童可以保护成年人。没有证据能够证明这一点。首先儿童的感染率很低，跟儿童密切接触的学校老师感染率不高，家长也很少有被孩子传染的。再者，让儿童保护成人是非常不道德的，不管有没有必要。另外一个原因是降低儿童长期患COVID的几率，但是儿童中没有发现长期患COVID的。这两种原因都不成立，给儿童接种疫苗的理由不成立。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/va01.png)
-[**GETTR视频链接**](https://gettr.com/post/ptgtht7e11)
+![](https://gdb.voanews.com/09dd0000-0a00-0242-f776-08d9e826901a_w1023_r1_s.png)
+近年来，中共积极游说国际电信联盟（ITU）、国际电工委员会（IEC）等机构，让中共的企业获得竞争优势。面对此冲击，美在北京冬奥开幕当天通过《2022年美国竞争法》，旨在帮助美半导体制造业，抵消中共扭曲市场的贸易行为，包括加强反倾销规则等。
 
-[**GTV视频链接**](https://gtv.org/video/id=6203c624585ecc15d73f646e)
+美国也和日本连手建立6G无人化技术的国际标准，防止中共企业垄断，并强化尖端技术保护，防范中俄经济间谍战。
 
-**视频字幕：**
+欧盟主管竞争事务的执委维斯塔哲（Margrethe Vestager）表示，中共近期重新定义网络的基本标准，让中共对国有网络的使用者有更大的控制权，因此，欧盟委员会提出对行业标准系统实施改革，藉以避免欧洲数码产业等被被中共主导。
 
-**Anthony Hinton耳鼻喉科顾问**：我们到底应不应该为儿童接种疫苗？除了一两个非常非常罕见的案例外，儿童几乎很少被COIVD伤害。因此对儿童来说，我认为接种疫苗是有百害而无一利的。他们不需要疫苗。
+近日，北京大学在一份报告中罕见承认，美中科技脱钩后，中共无论在技术层面还是产业层面都明显落后，中共的芯片制造、人工智能及信息科技产业更将面临严重的发展瓶颈。该报告在墙内被火速删除。
 
-那你为什么要这样做呢？但是某些人仍然在推动此事，说是为了保护成年人。几乎没有任何证据证明这一点。如果你看一下学校老师的COVID感染人数，比一般人要少，而且他们一直在与儿童接触。如果你看一下感染的儿童，他们的家人中有多少人感染了？你会得到同样的结果。儿童似乎很难传播，可能是因为他们的症状较少，如果他们没有那么多的咳嗽和吐痰，他们就不会那么多地传染。
+文字版原文：[美通过《2022年美国竞争法》，防止中共企业垄断](https://gnews.org/zh-hans/2022413/)
 
-对于给儿童接种来保护成年人这件事，我只想说这是完全不道德的。即使是必要的，也是完全不道德的。我的意思是，孩子的祖父母会说：请不要为了保护我而对我的孙子做什么—让他们处于危险之中。我可以选择自己接种疫苗，这是我应该做的。
+音频处理：Tom Li
+发稿：Tom Li
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
+**更多资讯，更多关注**
 
-这是他们给孩子接种的一个原因。另一个原因是长期患COVID，但在儿童中真的没有长期患COVID的。因此，人们推动儿童接种疫苗的两个主要原因并不存在。
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
 
-*字幕：Vekap | 听写：云岭 | 翻译：致良知 | PR：Roberts |简评/文字整理/编辑：胖丁 | Page：我是球大哥*
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
 
-* * *
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
 
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
 
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
 
-编辑：【英国伦敦喜庄园编辑部】
-
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
-
-
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
  
 
