--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,47 +1,29 @@
 ---
-title: 【秘翻在线】美国教育部免除了大学生的4.15亿美元的借款
+title: 香港疫情失控，确诊病例爆炸性增长
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2022712/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2022730/)
 
-**撰稿：Grace**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Unknown-17.jpg)香港疫情失控，确诊病例爆炸性增长 网络图片
+据美国之音2月17日报道，香港17日新增Covid-19确诊病例6116例，再次大幅度超过前一天的4285例，新增死亡病例24人。香港今年1月以来累计确诊病例1.66万例，超过2020年和2021年两年病例的总和。
 
-**校对：Grace**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-17-at-8.50.29-PM.jpeg)图片来源：kfvs12
-据CBS news 2月17日报道，在新的证据显示大学生的学校可能误导了他们的贷款后，美国教育部已经批准了近16000名前学生的4.15亿美元的借款人辩护索赔。最新一轮的贷款豁免使该部门为超过10.7万名借款人批准的总金额达到约20亿美元。
+病人数量大大超出医院的接纳能力，导致公立医院不堪重负。隔离设施已经达到满负荷，病床占用率已经超过90%。此外，香港的监狱也发现了疫情。
 
-联邦学生援助署首席运营官理查德·科德雷（Richard Cordray）周三在一份声明中说：“当学院和职业学校将自己的利益置于学生之上时，我们不会视而不见。”
+香港的学校、健身房、影院等公共场所已经关闭，许多政府和企业员工都在家上班。这样，就能缓解疫情吗？绝不可能。因为病毒的根源就是中共。不铲除中共，病毒会永远盘旋在香港，建再多的隔离设施，建再多的病房都不够用，只有消灭中共这个制造并释放病毒的源头，香港才可能停止病毒的扩散。
 
-**德弗里大学 （****DeVry University****）**
+新闻参考链接：[https://www.voachinese.com/a/hong-kong-s-covid-fight-intensifies-as-cases-multiply-by-60-times-20200217/6445883.html](https://www.voachinese.com/a/hong-kong-s-covid-fight-intensifies-as-cases-multiply-by-60-times-20200217/6445883.html)
 
-在教育部审查了 “大量的证据 “后，大约1800名前德弗里大学的学生将被免除7170万美元的费用，这些证据表明该大学一再误导未来的学生。
+* * *
 
-德弗里大学被指控在2008年至2015年期间不准确地声称，90%积极寻找工作的毕业生在毕业后六个月内获得了所学领域的工作。但教育部表示，实际比例约为58%，而且据称学校官员多年来一直知道这个不准确的统计数字。
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
-教育部表示，它预计纽约学校的批准数量会增加。
 
-#### 西木学院 （Westwood College ）
+编辑：【英国伦敦喜庄园编辑部】
 
-同样，西木学院被指控在2002年至2015年期间谎报其毕业生的就业率为80%或更高，教育部指出，该学院撒谎说”毕业生的工资将达到5万美元或更多”。学校还说，如果学生在毕业后六个月内没有找到工作，学校将帮助他们支付账单。
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
-来自该校的约1600名借款人将被免除5310万美元的贷款，教育部说，它正在确定以前被拒绝的案件，这些案件可以在周三的证据下重新开放和批准。
 
-报道称，这是针对这所现已关闭的科罗拉多州丹佛市学校的第三次此类调查结果。
-
-#### 明尼苏达商学院/环球大学（Minnesota School of Business/Globe University）
-
-教育部发现明尼苏达商学院和/或环球大学误导了刑事司法课程的学生，告诉他们毕业后可以成为明尼苏达州警察或假释/保释官。但该课程没有适当的认证或证书，使得其学生无法进入这些角色。
-
-因此，学生们将获得全额的借款人辩护解除。教育部批准为270名学生提供约300万美元的减免。
-
-据报道，这是该学校的学生第二次获得清偿。
-
-#### 其它学校
-
-教育部周三宣布，超过11,900名曾就读于包括科林斯学院（Corinthian Colleges）和马里内罗美容学校（Marinello Schools of Beauty）的学生将获得2.845亿美元的遣散费。
-
-教育部长米格尔-卡多纳（Miguel Cardona）说：“学生们指望他们的学院是真实的。不幸的是，今天的调查结果显示，有太多的例子表明，学生被误导在不能兑现他们所承诺的机构或项目中贷款。”
-
-**新闻来源：****[Education Department to forgive $415 million in student debt for nearly 16,000 borrowers who were misled by colleges](https://www.cbsnews.com/amp/news/student-loan-forgiveness-debt-education-department-415-million/#app)**
 
  
 
