--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,36 +1,47 @@
 ---
-title: 拜登警告：俄罗斯撤军“未经证实”，入侵仍有可能
+title: 【秘翻在线】美国教育部免除了大学生的4.15亿美元的借款
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2022705/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2022712/)
 
-![President Joe Biden speaks about Russia and Ukraine in the East Room of the White House on Feb. 15, 2022. (Brendan Smialowski/AFP via Getty Images)](https://img.theepochtimes.com/assets/uploads/2022/02/15/Joe-Biden-4-700x420.jpg)乔·拜登总统于 2022 年 2 月 15 日在白宫东厅谈论俄罗斯和乌克兰。（Brendan Smialowski/AFP via Getty Images）
-来源于《大纪元时报》网站2022年02月15日的报道，尽管有报道称俄罗斯从乌克兰边境撤出了部分军队，但总统乔·拜登继续警告俄罗斯仍然可能入侵乌克兰。
-俄罗斯总统普京周二表示，他对与西方的安全谈判持开放态度，并且一些俄罗斯军队正在离开乌克兰附近的阵地。之后不久，拜登发表讲话称，俄罗斯入侵“仍然很有可能”。拜登补充说，虽然俄罗斯撤军“会是件好事”，但美国“尚未证实”有任何军队正在撤军。
-“事实上，我们的分析人士表示，他们仍然处于非常具有威胁性的位置。”拜登说，目前在乌克兰边境和白俄罗斯的俄罗斯驻军总数超过15万，比之前的说法有所增加。此前，俄罗斯国防部将其周二发布的坦克和装甲车移动的图像，描述为部队迁往“永久部署的地点”。
-俄罗斯否认其计划入侵，但要求西方停止乌克兰加入北约的申请。拜登周二重申了美国的立场，即与莫斯科的外交是最好的前进方向，称北约不会对俄罗斯构成威胁。“我们愿意采取切实可行的以结果为导向的步骤，以促进我们的共同安全。”拜登说，“不过，我们不会牺牲基本原则。”
-西方领导人坚持认为，各国应该有权享有领土完整和选择与谁交往的自由。拜登还重申，如果俄罗斯采取行动入侵乌克兰，美国及其盟国将实施严厉制裁，称“长期后果将损害俄罗斯在经济和战略上的竞争能力。”
-拜登再次敦促美国公民现在就离开乌克兰。美国周一宣布，外交人员将从基辅大使馆迁往西部城市利沃夫。拜登周二还再次表示，虽然美国不会派兵在乌克兰作战，但它将保卫北约领土。
+**撰稿：Grace**
 
-五角大楼周一宣布，国防部长劳埃德·奥斯汀(Lloyd Austin)本周将前往欧洲访问北约东部盟国，与外国领导人会面并监督驻扎在该地区的部队。拜登政府于2月2日宣布了增加其在东欧的驻军计划。该部署包括前往德国和波兰的约2,000名士兵，以及从德国转移到罗马尼亚的1,000名骑兵部队。
-简评：
-俄罗斯总统普京说已经部分从乌克兰撤军，而拜登总统说还有15万部队驻扎在乌克兰和白俄罗斯边境。针对两个大国领导人的那么不一致说辞，做为普通民众的我们只会想：没有卫星吗？或者无人机在什么地方？
-而郭文贵先生在2月16日大直播上给新中国联邦的战友们解读的是：普京包括拜登等国际大佬们都在玩世界最高等的游戏——战争经济，喊打喊杀都能赚钱！
-国际大佬们的玩法已经超出普通民众的想象力，但战争经济只能让少部分人受益是不争的事实。而爆料革命的新中国联邦的战友们也有幸跟随郭文贵先生一起在风云突变的国际形势下，拥有财富，为进一步消灭中共政权奠定坚实的经济基础。
+**校对：Grace**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-17-at-8.50.29-PM.jpeg)图片来源：kfvs12
+据CBS news 2月17日报道，在新的证据显示大学生的学校可能误导了他们的贷款后，美国教育部已经批准了近16000名前学生的4.15亿美元的借款人辩护索赔。最新一轮的贷款豁免使该部门为超过10.7万名借款人批准的总金额达到约20亿美元。
 
-新闻链接：[https://www.theepochtimes.com/biden-russian-troop-withdrawal-not-verified-150000-still-threatening-ukraine\_4280378.html](https://www.theepochtimes.com/biden-russian-troop-withdrawal-not-verified-150000-still-threatening-ukraine_4280378.html)
+联邦学生援助署首席运营官理查德·科德雷（Richard Cordray）周三在一份声明中说：“当学院和职业学校将自己的利益置于学生之上时，我们不会视而不见。”
 
-翻译/简评：Brianchow PR：Harvey（叶知秋）
+**德弗里大学 （****DeVry University****）**
 
-* * *
+在教育部审查了 “大量的证据 “后，大约1800名前德弗里大学的学生将被免除7170万美元的费用，这些证据表明该大学一再误导未来的学生。
 
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+德弗里大学被指控在2008年至2015年期间不准确地声称，90%积极寻找工作的毕业生在毕业后六个月内获得了所学领域的工作。但教育部表示，实际比例约为58%，而且据称学校官员多年来一直知道这个不准确的统计数字。
 
+教育部表示，它预计纽约学校的批准数量会增加。
 
-编辑：【英国伦敦喜庄园编辑部】
+#### 西木学院 （Westwood College ）
 
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+同样，西木学院被指控在2002年至2015年期间谎报其毕业生的就业率为80%或更高，教育部指出，该学院撒谎说”毕业生的工资将达到5万美元或更多”。学校还说，如果学生在毕业后六个月内没有找到工作，学校将帮助他们支付账单。
+
+来自该校的约1600名借款人将被免除5310万美元的贷款，教育部说，它正在确定以前被拒绝的案件，这些案件可以在周三的证据下重新开放和批准。
+
+报道称，这是针对这所现已关闭的科罗拉多州丹佛市学校的第三次此类调查结果。
+
+#### 明尼苏达商学院/环球大学（Minnesota School of Business/Globe University）
+
+教育部发现明尼苏达商学院和/或环球大学误导了刑事司法课程的学生，告诉他们毕业后可以成为明尼苏达州警察或假释/保释官。但该课程没有适当的认证或证书，使得其学生无法进入这些角色。
+
+因此，学生们将获得全额的借款人辩护解除。教育部批准为270名学生提供约300万美元的减免。
+
+据报道，这是该学校的学生第二次获得清偿。
+
+#### 其它学校
+
+教育部周三宣布，超过11,900名曾就读于包括科林斯学院（Corinthian Colleges）和马里内罗美容学校（Marinello Schools of Beauty）的学生将获得2.845亿美元的遣散费。
+
+教育部长米格尔-卡多纳（Miguel Cardona）说：“学生们指望他们的学院是真实的。不幸的是，今天的调查结果显示，有太多的例子表明，学生被误导在不能兑现他们所承诺的机构或项目中贷款。”
+
+**新闻来源：****[Education Department to forgive $415 million in student debt for nearly 16,000 borrowers who were misled by colleges](https://www.cbsnews.com/amp/news/student-loan-forgiveness-debt-education-department-415-million/#app)**
 
  
 
