--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,33 +1,20 @@
 ---
-title: 有声&#124;从马致远“断肠人在天涯”的悲哀到从神而来的喜悦
+title: 关注中国人权的NBA球星坎特透漏获得诺贝尔和平奖提名
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2022496/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2022498/)
 
-配音：香草山教育部 – 子兵
-![](https://assets.gnews.org/wp-content/uploads/2021/10/image-105.png)
-小时候，当我读到马致远的元曲《天净沙・秋思》时，被曲中的词深深地触动，“枯藤老树昏鸦，小桥流水人家，古道西风瘦马。夕阳西下，断肠人在天涯。” 句子中“枯”“老”“昏”“古道”“西风”“瘦”“夕阳”“断肠人”“天涯”，所有这些词都代表着疾病，老去，离别，寒冷，没有温暖，预示着死亡，没有希望。
+撰稿：追着曙光跑
 
-作者来自北方，可能习惯于大漠草原，宽阔无拘束的生活，对于南方的小桥流水人家也不习惯，也可能是自己独自在异乡，没有亲人朋友，看到别人全家团圆，更让他思念自己的家乡与亲人，这种断肠人在天涯的悲伤该是多么的痛苦……
+2月17日，NBA球星坎特发推表示，能获得诺贝尔和平奖提名，他既感到荣幸又受宠若惊；他说，有时候表明立场比领到下一份薪资更重要。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/WhatsApp-Image-2022-02-18-at-10.31.19.jpeg)图片来自坎特推特
+美媒指出，日前被NBA球队放弃的坎特，有30位诺贝尔奖得主联署力挺坎特，他也因此被提名诺贝尔和平奖。
 
-所以我从小就是家乡观念很强，不太愿意离开自己的家乡，但是命运使然，我因家庭原因不得不离开家乡，来到北美。虽然很快适应了这里的生活，但还是很想念家乡，直到我认识了主耶稣基督，成为了神的儿女。有了对神的信仰后，我的心态也在慢慢改变。神是公义和慈爱的，当我们感受到神的爱，当我们有了永生的盼望，有了同是基督徒的弟兄姐妹的互相扶持，我们就无所畏惧，充满喜乐。以赛亚书9章2节： [“在黑暗中行走的百姓看见了大光；住在死荫之地的人有光照耀他们。”](https://wd.bible/isa.9.2.cunps)
+坎特是塞尔蒂克前中锋，他是直言批评中共政府是反人类罪的残暴组织，是为中国人权发声的少数国际顶级运动员之一。
 
-回想过去，如果我自己没有信主，我的心态估计也会和马致远的心态一样，完全不知道神的创造的美好，而是顾影自怜，生活在痛苦之中。当有了对神的信仰后，我们会发现神的伟大，祂因着对人的爱和怜悯，差派独生爱子耶稣基督来到人间，因着我们人的罪，被定在十字架上，受死，埋葬，第三天从死里复活，让我们这些罪人因信而得救。这是多么美好的事情，感谢主！
-所以幸福与否，在于人们信不信圣父圣子圣灵的一念之差，愿更多的人回心转意，脱离老我，回到神的道上来，我们就充满平安喜乐。跟随主耶稣，奔走天路。
+此外，坎特曾在去年11月23日接受福克斯新闻采访时，敦促国际奥委会放弃2022年北京举行冬奥会。他说，即使大部分职业体育界都对中共侵犯人权、对中共领导层的指控保持沉默，但总得有人站出来与中共反抗。
 
-文字版原文：[从马致远“断肠人在天涯”的悲哀到从神而来的喜悦](https://gnews.org/zh-hans/2015662/)
+信息来源：[I’m honored and humbled to received the nomination for the Nobel Peace Prize.](https://twitter.com/enesfreedom/status/1493986402077401090?s=21)
 
-音频处理：Fei797
-发稿：Fei797
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e-1.jpg)
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
