--- a/gnews/36.md
+++ b/gnews/36.md
@@ -1,39 +1,33 @@
 ---
-title: 新闻述评：从即将闭幕的冬奥会看中共行将结束的政权
+title: 有声&#124;从马致远“断肠人在天涯”的悲哀到从神而来的喜悦
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2022491/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2022496/)
 
-作者：东京樱花团｜捆绑CCP一千年
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1674.png)[*图片来源*](https://www.firstpost.com/sports/beijing-winter-olympics-2022-organisers-hit-out-at-xinjiang-lies-claim-taiwan-an-indivisible-part-of-china-10382401.html)
-**随着北京冬奥即将闭幕，北京政权开始自吹双奥之都。但世界从2008夏季奥运到2022冬季奥运看中共国的由盛到衰的历史演进，人们不难发现，在这其间，中共国经济命运又和台湾有着紧密相连，甚至可以看出，两岸关系兴衰关乎中共命运。这其间奥秘，无人可解，但这是客观事实。**
+配音：香草山教育部 – 子兵
+![](https://assets.gnews.org/wp-content/uploads/2021/10/image-105.png)
+小时候，当我读到马致远的元曲《天净沙・秋思》时，被曲中的词深深地触动，“枯藤老树昏鸦，小桥流水人家，古道西风瘦马。夕阳西下，断肠人在天涯。” 句子中“枯”“老”“昏”“古道”“西风”“瘦”“夕阳”“断肠人”“天涯”，所有这些词都代表着疾病，老去，离别，寒冷，没有温暖，预示着死亡，没有希望。
 
-据中共国新华社17日消息，北京冬奥会周日闭幕，国家体育馆附近及其相关道路按惯例采取交通管制，交通限制时间从2月20日6时至闭幕式结束。这是中共吹嘘的双熬之城，注定成为中共政权以奥运会的形式为其画上句号的标志性事件。
+作者来自北方，可能习惯于大漠草原，宽阔无拘束的生活，对于南方的小桥流水人家也不习惯，也可能是自己独自在异乡，没有亲人朋友，看到别人全家团圆，更让他思念自己的家乡与亲人，这种断肠人在天涯的悲伤该是多么的痛苦……
 
-该消息透露，本届奥运会闭幕式的交通受限制道路面积从“慧忠路地下隧道、国家体育场北路、大屯路（不含大屯路地下隧道）”到“奥林东路北向南方向主辅路、北辰东路北向南方向主辅路、北辰路南向北方向主辅路（民族园路至北辰桥）。另外，“除持有闭幕式或冬奥组委核发的奥林匹克运动会专用证件的车辆和人员外，禁止其他车辆和行人通行。社会车辆和公交车绕行。”其中第六条规定，“闭幕式期间，将适时对北四环主辅路（健翔桥至安慧桥）采取临时交通管制措施，禁止车辆及行人通行。”
+所以我从小就是家乡观念很强，不太愿意离开自己的家乡，但是命运使然，我因家庭原因不得不离开家乡，来到北美。虽然很快适应了这里的生活，但还是很想念家乡，直到我认识了主耶稣基督，成为了神的儿女。有了对神的信仰后，我的心态也在慢慢改变。神是公义和慈爱的，当我们感受到神的爱，当我们有了永生的盼望，有了同是基督徒的弟兄姐妹的互相扶持，我们就无所畏惧，充满喜乐。以赛亚书9章2节： [“在黑暗中行走的百姓看见了大光；住在死荫之地的人有光照耀他们。”](https://wd.bible/isa.9.2.cunps)
 
-- ***延展阅读：***[***2022年北京冬奥会：组织者抨击新疆“谎言”；声称台湾是“中国不可分割的一部分***](https://www.firstpost.com/sports/beijing-winter-olympics-2022-organisers-hit-out-at-xinjiang-lies-claim-taiwan-an-indivisible-part-of-china-10382401.html)***”***
+回想过去，如果我自己没有信主，我的心态估计也会和马致远的心态一样，完全不知道神的创造的美好，而是顾影自怜，生活在痛苦之中。当有了对神的信仰后，我们会发现神的伟大，祂因着对人的爱和怜悯，差派独生爱子耶稣基督来到人间，因着我们人的罪，被定在十字架上，受死，埋葬，第三天从死里复活，让我们这些罪人因信而得救。这是多么美好的事情，感谢主！
+所以幸福与否，在于人们信不信圣父圣子圣灵的一念之差，愿更多的人回心转意，脱离老我，回到神的道上来，我们就充满平安喜乐。跟随主耶稣，奔走天路。
 
+文字版原文：[从马致远“断肠人在天涯”的悲哀到从神而来的喜悦](https://gnews.org/zh-hans/2015662/)
 
-这将是一场非同寻常的冬季奥运会闭幕，相比2008年夏季奥运会闭幕式[交通管制](http://www.gov.cn/govweb/fwxx/sh/2008-08/21/content_1076130.htm)，本届习近平的纳粹运动会相当严格。例如，“2008年北京奥运会闭幕式定于2008年8月24日（星期日）20时在国家体育场举行。届时有15万中、外宾客出席闭幕式。”这是非同寻常的盛大的开幕式，而本届冬奥闭幕式没有提及具体人数和闭幕式具体时间。而且管制时间是从“13时30分起至闭幕式结束，采取交通管制措施。”最后要求“除奥运专用车辆、公共汽车外，顺行方向禁止其他车辆通行。”从本届冬奥会闭幕式管制时间6点开始，且一切社会车辆和公交车辆都禁行的严格程度与08年奥运会相比，它是极其严格的、全天候的。
+音频处理：Fei797
+发稿：Fei797
 
-和开幕式一样，中共国再次如临大敌，但能否闭幕？这本身就是个问题。历史戏剧性地证明，中国经济腾飞从08年奥运会继续保持中共国的辉煌后，从2010年之后经济增长不再保持“数十年的两位数增长”。可见，中共国2008年的奥运经济由2007年的[23.1%](https://zh.wikipedia.org/wiki/%E4%B8%AD%E5%8D%8E%E4%BA%BA%E6%B0%91%E5%85%B1%E5%92%8C%E5%9B%BD%E5%9B%BD%E5%86%85%E7%94%9F%E4%BA%A7%E6%80%BB%E5%80%BC#%E5%B9%B4%E5%BA%A6%E6%95%B0%E6%8D%AE)的最高增长率下滑到[18.2%](https://zh.wikipedia.org/wiki/%E4%B8%AD%E5%8D%8E%E4%BA%BA%E6%B0%91%E5%85%B1%E5%92%8C%E5%9B%BD%E5%9B%BD%E5%86%85%E7%94%9F%E4%BA%A7%E6%80%BB%E5%80%BC#%E5%B9%B4%E5%BA%A6%E6%95%B0%E6%8D%AE)，这就已经是开启了虚假繁荣的魔咒。中共国不可持续的谎言治国从经济起伏涨落到本届奥运会可见一斑。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e-1.jpg)
 
-虽然国际社会对中共国纳粹运动会不公正裁判还有很多激烈的批评，但这场国际性丑陋、邪恶的表演终于要闭幕了。相信世界应该借此醒来，如果说，国际社会还能继续支持北京，那真的是一个人类社会大悲剧。它不仅仅是裁判舞弊那么简单，人们更应该看到[像韩国运动员郭允基（Kwak Yoongy）](https://7news.com.au/sport/winter-olympics/south-korean-skaters-winter-olympics-podium-dance-a-tribute-to-bts-after-china-controversy-c-5731575)那样的勇气，以K-pop男孩乐队的热门歌曲《炸药》（Dynamite）劲爆的舞蹈片段来抗议北京丑陋的裁判。
-
-中共国冬奥会丑陋的裁判让国际社会进一步认清了中共的邪恶。这种强盗体育和强盗政治正是它的政治经济学本质。可见，中共国经济真正出现放缓迹象也是2008年夏季奥运会。一个分水岭的标志性时间点自“2011 年第三季度增长 9.1%”以后，就不再是两千位数了。而且至今从未起来过。
-
-- ***延展阅读：***[***中国官员在奥运会上首次就台湾和新疆发表声明，宣布“一个中国”***](https://www.reuters.com/world/china/chinese-official-makes-first-statement-taiwan-xinjiang-games-declares-one-china-2022-02-17/)
-
-
-2011年到底发生了什么？一则有趣的消息是，“[2010年12月2日，前总统陈水扁日前因龙潭购地弊案和101买官案分别被判刑11年、8年定谳，下午发监至台北监狱服刑，成为中华民国第一位因罪入狱的卸任元首](https://zh.wikipedia.org/wiki/2010%E5%B9%B4%E8%87%BA%E7%81%A3#1%E6%9C%88)。”这不是偶然的，一年后，即2010年7月12日胡锦涛总书记会见中国国民党荣誉主席吴伯雄。之后于同年11月13日在日本横滨访问期间会见了台湾国民党荣誉主席连战。可见，中国共产党和台湾国民党的会见创造了划时代意义，而这正是胡锦涛自《反国家分裂法》颁布后发生的台湾局势。此后，中共国经济增长名义上从2017年起就显著放缓，然而，从 2007 年的[14.2%](https://zh.wikipedia.org/wiki/%E4%B8%AD%E5%8D%8E%E4%BA%BA%E6%B0%91%E5%85%B1%E5%92%8C%E5%9B%BD%E5%9B%BD%E5%86%85%E7%94%9F%E4%BA%A7%E6%80%BB%E5%80%BC#%E5%B9%B4%E5%BA%A6%E6%95%B0%E6%8D%AE) 降至 2018 年的[6.6%](https://zh.wikipedia.org/wiki/%E4%B8%AD%E5%8D%8E%E4%BA%BA%E6%B0%91%E5%85%B1%E5%92%8C%E5%9B%BD%E5%9B%BD%E5%86%85%E7%94%9F%E4%BA%A7%E6%80%BB%E5%80%BC#%E5%B9%B4%E5%BA%A6%E6%95%B0%E6%8D%AE)的数据看，它的变化本身说明了中共国经济与台湾关系的变化。
-
-实际上从2011年的9.6%就已经是个位数。从此后，中共国再也无法回到过去。这就是两届奥运会看中共由盛到衰的历史演绎，因此，北京冬奥注定为中共政权画上句号。
-
-2022年2月17日
-
-*校对：东京樱花团/東洋武士*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
