--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,87 +1,29 @@
 ---
-title: 全球疫情更新（英儿童“疫苗”获批背后的十亿美元猫腻）
+title: 从美元和欧元看到中共的狂妄
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2022829/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2022850/)
 
-**整理/编辑：枳实**
+美元和欧元之间的关系，就是男女之间的关系。你未来会看到这场战争发生以后，绝对是中国的习太阳对政治的无知对国际政治的无知和狂妄。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1528.png)图片：雅典娜农场设计组 精灵蓝
+**【郭先生直播摘要】 2022.2.13 从美元和欧元看到中共的狂****妄**
+
+**郭先生****: **
+
+欧元暴涨美元大跌，很多人以为这是美元和欧元的战争。大家一定记住，这是王八蛋的逻辑。
+
+美元和欧元之间的关系是啥你知道吗？战友们我可以告诉大家，就是男女之间的关系，谁没了谁都不行。美国需要欧元但不许你比我强大。
+
+这就像小飞象和小飞侠，两个人默默之间到底在家里谁是老大，我离不了你，你也离不了我。但是你要把我压迫了大了，我就找别人去。但是你不能压迫得我不能活，就是美元不能没有欧元，欧元不能没有美元。美元假如没有了欧元，人民币就做大，瑞元就做大。不存在所谓美元要干掉欧元，不存在欧元干掉美元。只有美元会自杀或者欧元会自杀，不存在这个。
+
+弱美元对美国经济是最好的，而且欧元强美元欧元也不愿意干。因为欧元不想跟俄罗斯这么弄，欧洲最核心的利益就是跟俄罗斯不打。但是俄罗斯说，孙子你想弄死我我还跟你不打仗，我非打你不行。对美国而言，你俄国你打吧，你打了对我是好事，欧洲弱我最强，美国的海外最大利益还是欧洲。美元和欧元之间不会导致战争，它只是利益考量的一部分。而且美国内部政治的选举即将到来，很多人说这是美国最大受益者，美国和俄罗斯的游戏绝对错了，这是一场世界上，你未来会看到这场战争发生以后，绝对是中国的习太阳对政治的无知对国际政治的无知，和自我的狂妄，和中国的互相欺骗。
+
+就像告诉习太阳普京说这是绝妙的机会。 这种欺骗一样， 是一种国际政治欺骗，和十四亿中国人认为美帝国主义一直在死亡中在堕落中， 中国要领导全世界这么无知一样，是愚蠢无知欺骗， 对国际规则完全被欺骗的老百姓， 造出一个集体自杀决定的结果。 就是中国共产党疯了， 而且这个疯狂被俄罗斯彻底利用， 赢家一定是俄罗斯， 赢家一定是美国， 灭的是中国而且欧洲因此会重生。
 
 
-雅典娜疫情更新（2022年 2月17日）
 
-[往期《雅典娜疫情更新](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)[》](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)
 
-**一，全球疫情基本数据**
 
-感染总数：417,655,449（日新增2,062,397人，14天增幅-35%）
-
-死亡总数：5,849,200（日新增10,341      人，14天增幅 -1%）
-
-**二，全球“疫苗”毒针统计数据**
-
-“疫苗”毒针注射总数：105亿
-
-完全“接种”：42.8亿人
-
-完全“接种”百分比：54.9%
-
-**三，澳洲疫情和“疫苗”数据**
-
-感染总数：2,967,078（今日新增28,052人）
-
-死亡总数：4,798人（今日新增 66人）
-
-每万人感染人数：1151.6461人
-
-“疫苗”毒针注射总数：52,859,039    （今日新增157,935    针）
-
-完全“接种”：19,409,879人
-
-第二针“接种”百分比：79.3%
-
-16岁以上人口接种至少一剂疫苗的比例：&gt;95%
-
-16岁以上人口接种至少两剂疫苗的比例：94.1%
-
-加强针总数：10,453,973    （日新增：136,476针）
-
-**四，****疫情新闻评论**
-
-澳大利亚和美国等国家早已批准了5-11岁的中共病毒疫苗毒针的广泛接种，而英国则一直没有批准，去年底12月，仅仅批准了对有并发症的儿童接种。但周二，英国政府终于也加入了进一步毒害儿童的行列，[根据英国疫苗接种和免疫联合委员会 (JCVI) 的建议](https://www.theguardian.com/world/2022/feb/17/limited-vaccine-access-for-children-in-england-aged-5-11-likely-to-widen-inequalities)，宣布[将为英格兰所有 5 至 11 岁的儿童提供中共病毒疫苗。](https://www.theguardian.com/world/2022/feb/16/five--to-11-year-old-children-in-england-to-be-offered-covid-vaccine)[威尔士](https://www.theguardian.com/uk-news/2022/feb/15/children-aged-five-to-11-in-wales-to-be-offered-covid-jab)和[苏格兰](https://www.theguardian.com/uk-news/2022/feb/16/scotland-to-offer-covid-jab-to-all-children-aged-five-to-11-says-sturgeon)也发布了类似的公告，北爱尔兰已经确认也会这样做。
-
-然而，今天《每日曝光》仅通过初步的搜索，就揭露了疫苗接种和免疫联合委员会中的六名成员以不同方式接受了盖茨基金会的资助，总额达到十亿美元之巨！然而这些委员却没有一人曾经申报过存在利益冲突。更令人震惊的是，其中一名委员领导着辉瑞疫苗卓越中心竟然也没有申报！
-
-还有其它蹊跷的事情。例如林魏生教授（PROFESSOR LIM WEI SHEN，音译）曾经在 2021 年 8 月 4 日明确表示，不会向12-15 岁的儿童  提供 COVID-19 疫苗。发表该声明后不到 6 周，就赞同了为 12-15 岁的孩子提供毒针，此后仅 6 个月，就扩展到了 5-11 岁的孩子们。
-
-再比如来自英国公共卫生部的KEVIN BROWN 博士。“BROWN 博士没有登记的利益冲突”，但他的雇主英国公共卫生部已从盖茨基金会获得 7,451,295 美元。另外布朗博士还与人合作进行了一项关于辉瑞和阿斯利康针剂的“真实世界有效性”的有利于药厂的研究。
-
-[往期《雅典娜疫情更新](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)[》](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)
-
-数据来源：
-
-[谷歌](https://www.google.com/search?q=covid+case&amp;rlz=1C1ONGR_en-GBAU960AU960&amp;oq=covid+case&amp;aqs=chrome..69i57j69i59j0i402l2j0i131i433i512j0i20i131i263i433i512j0i131i433i512j69i60.1435j0j4&amp;sourceid=chrome&amp;ie=UTF-8)
-
-[Our world in data](https://ourworldindata.org/coronavirus-data)
-
-[澳大利亚卫生部网站中共病毒疫苗统计](https://www.health.gov.au/initiatives-and-programs/covid-19-vaccines/numbers-statistics)
-
-[澳洲TGA每周疫苗不良反应报告](https://www.tga.gov.au/covid-19-vaccine-safety-monitoring-and-reporting)
-
-[covidlive.com.au](https://covidlive.com.au/)
-
-[Booster shot gap to be slashed to four months and then down to three](https://www.news.com.au/lifestyle/health/health-problems/booster-shot-period-to-be-slashed-to-four-and-three-months-as-omicron-fight-ramps-up/news-story/005b2aabba44f2e2b72dac7aa019611d)
-
-[Coronavirus World Map](https://www.nytimes.com/interactive/2021/world/covid-cases.html)
-
-发布：tianzhihuan
-
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+视频剪辑：CG. |听写：雨山溪桥客. 翻译：Arthur | tonyj | 视频制作+字幕：刀锋舞者 |编辑&发布:闪电训练
 
  
 
