--- a/gnews/40.md
+++ b/gnews/40.md
@@ -1,40 +1,62 @@
 ---
-title: 《避风港Haven》直播内容精华（第十集.上）
+title: 7·24系列——中共藏钱圣地“卢森堡”
 ---
-`喜马拉雅纽约磐石农场` [轉載自GNews](https://gnews.org/zh-hans/2022356/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2022461/)
 
-[2](https://gtv.org/video/id=62081295a1fe5e57a42778cd)[022-2-12《避风港》(10) 视频回放： 移花接木疫苗副反应 – 用心良苦](https://gtv.org/video/id=62081295a1fe5e57a42778cd)
-疫苗副作用被嫁祸给新冠病毒感染和艾滋病感染患者 视频剪辑：外星人 
-**1，移花接木疫苗副反应的第一式：欲将疫苗并发症嫁祸给新冠病毒的感染。**
+**整理：**雅典娜情报组（禄森、翼族）
+**编辑：**翼族
+![](https://assets.gnews.org/wp-content/uploads/2022/02/下载-4.jpg)图片来源：GlobalCapital
+卢森堡大公国，欧盟和北约创始成员国之一，也是世界上面积最小的国家之一，国土仅2586平方公里，比海口市略大，在地图上常常被忽略。但卢森堡在国际金融市场却占有举足轻重的地位，是世界最重要的国际金融市场之一，也是欧洲最大的债券市场。
 
-主流媒体配合科学界开始新舆论导向: 宣称大量的心血管相关疾病属于病毒感染后遗症，欲将疫苗并发症嫁祸给新冠病毒的感染。
+同时，卢森堡还是世界上最富有的国家之一，人均GDP全世界第一，每天都有巨额的财富在卢森堡流转。卢森堡是欧元区最大的财富管理和私人银行中心，也是全球第二大的投资基金中心，仅次于美国的投资信托中心，**欧洲投资中国的基金80%以上都在卢森堡注册，通过卢森堡进入中国。**而郭文贵先生曾在2021年11月1日大直播中爆料，卢森堡在中共海外的金融运作中占比高达57%（概要）：
 
-近日，来自华盛顿大学的一名学者在《Nature Medicine》上发表论文，宣称新冠的感染可能将导致严重的心血管并发症甚至死亡。
+##### 卢森堡是喜联储大额储备银行，也是黄金合作银行，中共威胁它，卢森堡是共产党所有海外金融运作（的比例）达到了57%，不是在瑞士也不是新加坡。但是卢森堡告诉共产党，你要是敢让我离开喜联储，咱们就脱钩，这下就把共产党吓懵了。它（共产党）敢威胁列支敦士登，只因为其占海外金融运作的8%，但是卢森堡占57%它就不敢了，可想而知卢森堡对共产党的重要性。
 
-研究发现在疫情之后的一年里，不良心血管事件发生率高出了之前的55%。目标人群无论年龄，种族，身体状态以及是否有心血管疾病史，在感染新冠病毒后都会面临长期潜在的心血管疾病影响。首当其冲为心肌炎与心包炎，其次为急性心梗死，缺血性中风以及静脉血栓栓塞症。
+从历史来看，中共很早就开始了在卢森堡的布局。上个世纪70年代末，邓小平在中共内部经过一系列的政治斗争，刚坐稳屁股，就开始了盗国行径。1979年6月，**中国银行**奉命在卢森堡开设**第一家海外子公司**。郭先生2022年1月19日爆料，邓小平家族在卢森堡藏有巨量的财富（概要），“中国共产党在卢森堡的耕耘已经几十年了，共产党的命根钱袋子就在卢森堡，并且邓家在卢森堡藏的老钱在过去几十年都没有动过，那可是天大的钱。但最近邓家买了天大的黄金以及期货，这可是天大的好消息， 因为邓家开始动这个钱，证明共产绝对完了”。
 
-- 众所周知，中共病毒毒疫苗中的刺突蛋白是这一切的罪魁祸首，在如今西方国家如此高的疫苗接种率情况下，主流科学界和媒体试图掩盖疫苗次生灾难，及移花接木嫁祸于病毒感染，并以此恐吓未接种人群去接种疫苗，以防病毒感染带来的长期健康影响。并开始引导舆论为即将到来的大规模疫苗次生灾害做心理准备。由此也看出各国政府在疫苗问题上已经黔驴技穷，并间接承认不正常的心血管疾病高发现象。
+1999年11月15日，中美双方就中国加入世贸组织达成双边协议后不久，中共立刻加速了在卢森堡的金融运作。1999年12月，**中国工商银行**卢森堡分行开业。
 
+而2008年北京奥运会之后，中共与卢森堡开始了全面的金融合作。2008年2月，卢森堡成为少数几个允许对中国投资分销QDII（合格境内机构投资者）资格的国家和地区之一。
 
-- 疫苗真相已渐近浮出水面，黑暗势力在为近在咫尺的疫苗灾难做一系列的掩盖准备。
+2013年9月，卢森堡证劵交易所与深证证劵交易所合作开发金融工具的上市。同年10月，**中国建设银行**开设卢森堡分行；11月，卢森堡监管机构批准了首个RQFII（人民币合格境外机构投资者）。
 
+2014年4月，中国与卢森堡金融系统对接；5月，中行离岸人民币债劵在卢森堡证劵交易所上市；9月，中国人民银行指定工商银行为卢森堡人民币清算行；11月，开通沪港业务，**中国农业银行**在卢森堡获得全面银行牌照；12月，中国工商银行正式在卢森堡启动人民币清算行。
 
-**2，移花接木疫苗副反应的第二式：欲将疫苗并发症嫁祸给艾滋病感染患者。**
+2015年3月，**招商银行**卢森堡分行开业。同年4月，卢森堡获得授予500亿元RQFII额度；10月，卢森堡首次使用人民币清算系统交易；12月，首支卢森堡中国RQFII投资基金成立。
 
-近日，欧洲媒体开始将HIV疫苗副反应向艾滋病患者身上引流，美国媒体大量转载，**欲将疫苗并发症嫁祸给艾滋病感染患者。**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/移花接木-疫苗副作用嫁祸于病毒感染-e1645140765769.jpg)**移花接木 – 疫苗副作用嫁祸于新冠病毒感染**![疫苗与艾滋病](https://assets.gnews.org/wp-content/uploads/2022/02/移花接木-疫苗副作用嫁祸于艾滋病患者-e1645140735128.jpeg)**移花接木 – 疫苗副作用嫁祸于艾滋病感染患者**
-听写/文稿整理：外星人
+2016年7月，中行在卢森堡上市28亿美元“绿色债劵”；同年11月，**交通银行**卢森堡分行正式开业。
 
-文案：万物有灵/Eglise 医生
+2017年6月，上海证劵交易所与卢森堡合作，启动“绿色债劵”指数的协议；9月，**中国光大银行**卢森堡分行正式开业。
 
-视频：外星人
+2018年1月，卢森堡与**中国农业银行**建立合作承销绿色，扶贫和可持续发展债劵；同年4月，中国银行首支“一带一路”主题债劵在卢森堡上市；11月，卢森堡与**中国兴业银行**合作，建立绿色债劵债务市场；12月，**支付宝**欧洲获得卢森堡电子货币机构牌照。
 
-编辑发布：Gloria
+2019年1月，香港证劵交易所允许符合条件的基金简化流程在彼此的市场；3月，卢森堡与中共签署了“一带一路”合作协议，成为少数几个这样做的西欧国家之一。5月，中国工商银行卢森堡分行获准在卢森堡成为交易所交易会员；6月，卢森堡与中国建设银行签约促进两国人民币国际化；9月，卢森堡与**中金**签约，为其上市和交易活动指定互惠互利的框架；9月，卢森堡国际银行在北京开设办事处。
 
-[2022-2-12《避风港》(10) 视频回放： 移花接木疫苗副反应 – 用心良苦](https://gtv.org/video/id=62081295a1fe5e57a42778cd)
+2020年1月，卢森堡与澳门金融资产交易有限公司合作，促进离岸人民币计价金融产品的跨境投资和流动性；7月，**国家开发银行**在卢森堡挂牌首支绿色债劵；9月，招商银行首支可持续发展债劵上市，平安资产管理推出首支基金；11月，卢森堡退出QFII和RQFII，将合并后的QFI放低资金进入中国的门槛。
 
+2021年，19支中国“绿色债劵”在卢森堡绿色交易所上市，获得资金62.7亿欧元。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/磐石discord.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/01/b3df4b36-df11-4361-a8f5-6c7e5f9da569.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/01/GTV.jpg)
+综上，卢森堡在过去数十年里已经成为“**人民币通向欧洲的大门**”，中国六大银行（中国银行、建设银行、工商银行、农业银行、招商银行和交通银行）均在卢森堡成立了它们的欧洲总部，卢森堡已经成为人民币跨境业务的欧洲金融中心。同时，由于美国政府对美元资产的长臂管辖，过去的数十年里中共盗国贼纷纷选择欧洲，将其作为主要的藏钱之地。因此不难得出结论，中共在卢森堡布局之深远广泛，已经形成了深度的利益关系。
+
+但是，随着中共的日暮西山，卢森堡继续维持其欧洲金融中心的地位面临着巨大的风险。近期郭文贵先生数次提到瑞银UBS案件在英国正式立案的重要性，并将它视为前半生与后半生的分水岭，因为一旦成功，就打开了为中国人民找回50万亿美元财富的大门。中共通过卢森堡在海外的金融运作占比57%，由此也可以看出，卢森堡也是中共海外藏钱和洗钱的大本营，瑞银UBS诉讼案很可能只是郭文贵先生“以钱灭共”的一个突破口，在严肃公正的欧美法律框架下撕开中共盗取人民财富的一个口子，最后的战场也包括卢森堡。
+
+2022年北京冬奥会，卢森堡大公亨利虽然应邀出席了开幕式，但国际关系并不是非黑即白。郭文贵先生在2022年1月19日的大直播中爆料（概要）：
+
+##### 爆料革命新中国联邦和国际社会合作有了一个最大进步，第一次！国际上最隐秘的，也是金融的沼泽地，包括瑞士，特别是卢森堡——卢森堡是共产党在西方洗钱和经济犯罪最根本的大本营。卢森堡也正式严肃的说，我们要和新中国联邦一次正式严肃的合作，如果不再与共产党合作，那么希望有一系列条件与新中国联邦谈判，但是与新中国联邦谈是有代价的。卢森堡这个地方就是金融届的梵蒂冈，已经超过瑞士，谈判的前提条件是，把喜币喜联储批一个银行金融牌照，以及公开承认新中国联邦在国际的政治地位。因为卢森堡相信是共产党制造了冠状病毒，这是共产党的生化武器，相信了疫苗是真正的杀人手段，爆料人就是新中国联邦Miles Guo。
+
+中共病毒肆虐全球两年多来，世界局势已经发生了天翻地覆的转变，越来越多的国家已经渐渐达成“全球灭共”的共识。作为中共金融盗国曾经的从犯，卢森堡必须做出弃暗投明的选择，这既是卢森堡唯一的选择，也是卢森堡与新中国联邦合作的本质原因。
+
+近期喜联储即将做出的重大公告，是否会与卢森堡有关，让我们拭目以待！
+
+*发布：翼族*
+
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
