--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,25 +1,29 @@
 ---
-title: 美智库：世银国际金融机构非法资助新疆强迫劳动公司
+title: 【秘翻在线】加拿大自由车队两名主要组织者已在渥太华被捕
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/2022827/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2022849/)
 
-**撰稿：日本东京方舟农场  海星**
+**撰稿：Grace**
 
-近期，美国智库发布的一份报告披露，世界银行旗下国际金融公司（International Finance Corporation）向新疆强迫劳动的中共公司非法提供巨额资金。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-283.jpg)（图片来源：美联社）
-据《自由时报》报导，美国华盛顿智库大西洋理事会发布的一份报告披露，世界银行旗下国际金融公司向晨光生物科技集团（Chenguang Biotech Group）、骆驼集团（Camel Group）、九州通医药集团（Jointown Pharmaceutical Group）和世纪阳光集团（Century Sunshine）共4家中共公司非法提供巨额资金，金额高达4.85亿美元。
+**校对：Grace**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-17-at-9.46.30-PM.jpeg)图片来源：Fox news 
+据加拿大广播公司新闻（CBC） 2月17日报道，加拿大的自由车队的两名主要组织者塔玛拉·利奇（Tamara Lich）和克里斯·巴伯9 Chris Barber）已在渥太华被捕。
 
-该报导指出，上述公司长期招聘新疆劳动人民，并强迫他们劳动，违反《全球马格尼茨基法案》。因此，大西洋理事会指控国际金融公司违反了国际标准，并呼吁该机构立即撤出对新疆强迫劳动公司的投资。
+据报道，利奇在周四晚上被捕，巴伯在当天早些时候被渥太华警方逮捕。两人都仍被警方拘留，预计将受到刑事指控。
 
-据悉，2019年美国国会及行政当局中国委员会（CECC）就因世界银行非法资助中共新疆劳改再教育营项目而对其提出控告，最终，世界银行终止了对该项目投资5000万美元的计划。
+利奇周四早些时候向加拿大媒体证实，当来自萨斯喀彻温省（Saskatchewan）的卡车司机巴伯被逮捕并被带离时，她就在现场。
 
-参考链接：
-1.[https://ec.ltn.com.tw/article/breakingnews/3832823](https://ec.ltn.com.tw/article/breakingnews/3832823)
-2.[https://www.ntdtv.com/b5/2019/11/12/a102705448.html](https://www.ntdtv.com/b5/2019/11/12/a102705448.html)
+利奇说，她对自己要入狱的事实心有不甘，并补充说她的个人银行账户已被冻结。
 
-素材采编：海星
-编辑：青城道姑
-发布：爱放飞
+报道称，他们是周四被逮捕的几个人之一。在离国会山几个街区的地方，有人看到巴伯被戴上手铐，夹在两名警察中间。
+
+据报道，他们是律师保罗·钱普（Paul Champ）代表他的客户21岁的公务员Zexi Li向安大略省高级法院（Ontario Superior Court of Justice）提起的拟议集体诉讼中的三名抗议活动组织者中的两人。
+
+该诉讼还提到了同为车队组织者的本杰明·迪克特（Benjamin Dichter）。
+
+据报道，当被问及巴伯的被捕时，渥太华警方表示，在提出指控之前，他们不会确认或否认对人的调查。
+
+**新闻来源：****[Convoy protest organizers Tamara Lich, Chris Barber arrested in Ottawa](https://www.cbc.ca/news/canada/ottawa/tamara-lich-chris-barber-arrested-ottawa-1.6355960)**
 
  
 
